Save/Update files [ci skip]

--- a/source/localisation/diplo_reasons_l_english.yml
+++ b/source/localisation/diplo_reasons_l_english.yml
@@ -131,7 +131,7 @@
  DIPLO_IS_NOT_OCCUPYING:0 "$WHO$を占領していない："
  DIPLO_OWNS_CORE_PROVINES:0 "$WHO$は$ADJ$の中核州を領有している："
  DIPLO_WAR_SCORE_AND_CAPACITY_BIGGER:0 "戦勝点と可能性が$VAL$より多い："
- DIPLO_WAR_SCORE_AND_CAPACITY_LESSER:0 "戦勝点と可能性が$VAL$より少ない："
+ DIPLO_WAR_SCORE_AND_CAPACITY_LESSER:0 "戦勝点と可能性が$VAL$未満："
  DIPLO_WAR_CAPACITY_TOO_LOW:0 "$WHO$の継戦能力は乏しい："
  DIPLO_WAR_CAPACITY_TOO_HIGH:0 "$WHO$の継戦能力はとても高い："
  DIPLO_OFFERS_WARSCORE:0 "提案内容と戦勝点の比較："
@@ -151,7 +151,7 @@
  DIPLO_HAS_NO_PROVINCES:0 "州を保有していない："
  DIPLO_BASE_TAX:0 "$WHO$と$OTHER$の経済基盤の比較："
  DIPLO_MORE_BASE_TAX_THAN:0 "$WHO$の総開発は$VAL$より多い："
- DIPLO_LESS_BASE_TAX_THAN:0 "$WHO$の総開発は$VAL$より少ない："
+ DIPLO_LESS_BASE_TAX_THAN:0 "$WHO$の総開発が$VAL$未満："
  DIPLO_TOTAL_DEVELOPMENT:0 "$TARGET$は開発$VAL$を持っている："
  DIPLO_MILITARY_POWER:0 "$WHO$と$OTHER$の軍事力の比較："
  DIPLO_HAS_MORE_PROVINCES_THAN:0 "$WHO$は$VAL$より多い数の州を持っている："
@@ -171,7 +171,7 @@
  DIPLO_ONLY_CALL_PRIMITIVES:1 "$SUBJECTTYPE$に適していない："
  DIPLO_COALITION_VS_SUBJECT:0 "我々の$SUBJECTTYPE$は、包囲網の形成を促しました："
  DIPLO_CURRENT_WARSCORE:0 "現在の戦勝点："
- DIPLO_WARSCORE_LESSER_THAN:0 "戦勝点が$VAL$より少ない："
+ DIPLO_WARSCORE_LESSER_THAN:0 "戦勝点が$VAL$未満："
  DIPLO_WARSCORE_LARGER_THAN:0 "戦勝点が$VAL$より多い："
  DIPLO_WAREXHAUSTION:0 "戦争疲弊："
  DIPLO_WAREXHAUSTION_LARGER_THAN:0 "戦争疲弊が$VAL$より大きい："
@@ -185,7 +185,7 @@
  DIPLO_MORE_THAN:0 "より多い"
  DIPLO_ALLYS_FOR_YEARS:0 "$ALLY1$は$ALLY2$と$YEARS$年間同盟を結んでいる："
  DIPLO_NOT_BEEN_ALLYS_FOR_YEARS:0 "$ALLY1$は$ALLY2$と$YEARS$年間同盟を結んでいない："
- DIPLO_DEFENSIVE_BAD_WARSCORE:0 "防衛戦争であり、あなたの戦勝点は$VAL$未満である："
+ DIPLO_DEFENSIVE_BAD_WARSCORE:0 "防衛戦争であり、戦勝点が$VAL$未満："
  DIPLO_DIPLOMATIC_REP:0 "$WHO$の外交評判："
  DIPLO_FED_DIPLOMATIC_REP:0 "$WHO$における総外交評判："
  DIPLO_DIPLOMATIC_SKILL:0 "$WHO$の外交スキル："
