--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -383,7 +383,7 @@
  emp_hab_spread_dynasties_has_dynasty_desc:0 "ハプスブルク家の者ができる限り多く王座に就くのは当然のことだ。我が一族のためにヨーロッパの王座を獲得せねばならない。"
  emp_hab_spread_dynasties_nodynasty_desc:0 "我が国の強さは軍事的な強さよりも外交的影響力によるところが大きい。我々と同じように考えている国々との関係を強化しなければならない。"
  emp_hab_spread_dynasties_trigger_tooltip:0 "§Y[Root.Monarch.Dynasty.GetName]§!王朝の一族に支配されている国家が§Y5§!以上の大陸に存在する。"
- emp_hab_spread_dynasties_trigger_tooltip2:1 "の国家（§Y[Root.GetName]§!を除く）：\n　§Y[Root.GetName]§!の評価が§Y120§!以上である\n　以下のいずれかが満たされている：\n　　§Y[Root.GetName]§!の支配者により統治されている\n　　支配王朝が§Y[Root.Monarch.Dynasty.GetName]§!である"
+ emp_hab_spread_dynasties_trigger_tooltip2:1 "の国家（§Y[Root.GetName]§!を除く）：\n　§Y[Root.GetName]§!の評価が§Y120§!以上\n　以下のいずれかが満たされている：\n　　§Y[Root.GetName]§!の支配者により統治されている\n　　支配王朝が§Y[Root.Monarch.Dynasty.GetName]§!である"
  emp_hab_viennese_waltz_title:0 "ウィンナ・ワルツ"
  emp_hab_viennese_waltz_desc:0 "首都[Root.Capital.GetCapitalName]は繁栄し、我が国の統治者の地位と神聖ローマ帝国の真の首都の双方にふさわしい、音楽と高尚な文化の都となっている。"
  emp_hab_imperial_capitals_title:0 "帝国首都"
@@ -824,9 +824,9 @@
  emp_ned_assert_dutch_sovereignty_tt:1 "§Y4§!州の中核州を領有する"
  emp_ned_challenge_spanish_power_title:0 "スペイン勢への挑戦"
  emp_ned_challenge_spanish_power_desc:0 "イベリア人は常に我々の交易に目を向けており、我々の土地さえも明らかに嫉妬深い目で見ている。我々は彼らを払いのける準備ができている必要がある！"
- emp_ned_challenge_spanish_power_1_tt:1 "§Yスペイン§!の海軍力の§Y33%§!以上である"
- emp_ned_challenge_spanish_power_2_tt:1 "§Yカスティーリャ§!の海軍力の§Y50%§!以上である"
- emp_ned_challenge_spanish_power_3_tt:1 "§Yアラゴン§!の海軍力の§Y50%§!以上である"
+ emp_ned_challenge_spanish_power_1_tt:1 "§Yスペイン§!の海軍力の§Y33%§!以上"
+ emp_ned_challenge_spanish_power_2_tt:1 "§Yカスティーリャ§!の海軍力の§Y50%§!以上"
+ emp_ned_challenge_spanish_power_3_tt:1 "§Yアラゴン§!の海軍力の§Y50%§!以上"
  emp_ned_fixed_garrison_system_title:0 "固定化した守備隊制度"
  emp_ned_fixed_garrison_system_desc:0 "我々の母国は大きくはなく、それは、我々が持っているものを守ることがますます重要となることを示している。我々は愛する我が国を守ることができる強力な守備隊制度を確立しなければならない。"
  emp_ned_fixed_garrison_system_tt:2 "の§Y低地諸国§!地方の州に、現在の軍事技術レベルで利用可能な最も高度なタイプの要塞がある。"
@@ -1224,7 +1224,7 @@
  emp_pap_eastern_alliances_tt:0 "§Yバルカン§!、§Yアナトリア§!と§Yコーカサス§!地方の全§Yキリスト教§!同盟国とその従属国は§Y15§!年間、補正§Y「ガスモウロイ軍団」§!を獲得し、以下の効果を得ます：\n国家水兵補正：§G+20%§!\n国家人的資源補正：§G+20.0%§!"
  emp_pap_prester_john_title:0 "プレスター・ジョン"
  emp_pap_prester_john_desc:0 "上ナイル以降のキリスト教社会は異教徒からの絶え間ない脅威にさらされている。これらの人々の闘争を支援するため、我々はできることをしなければならない。"
- emp_pap_prester_john_tt:0 "§Yアフリカの角§!地方のいずれかの§Yキリスト教§!国家に対する§Y[Root.GetName]§!の評価が§Y100§!以上である"
+ emp_pap_prester_john_tt:0 "§Yアフリカの角§!地方のいずれかの§Yキリスト教§!国家に対する§Y[Root.GetName]§!の評価が§Y100§!以上"
  emp_pap_prester_john_land_tt:0 "§Yアフリカの角§!地方で§Y6§!州領有する"
  emp_pap_rebuild_the_papal_treasury_title:0 "教皇庁会計局の再建"
  emp_pap_rebuild_the_papal_treasury_desc:0 "俗界の問題には俗界の解決手段が必要である。我々の宗教的な目標を達成するため、我々は自身の財政を強化しなければならない。"
@@ -1903,7 +1903,7 @@
  legacy_of_skanderbeg:0 "スカンデルベクの遺産"
  desc_legacy_of_skanderbeg:0 "スカンデルベクの戦役の研究は、すべてのアルバニアの君主にとって必須である。我々は今後の戦いで彼の軍事的資質を模倣できるよう努力しなければならない。"
  opinion_legacy_of_varna:0 "ヴァルナの遺産"
- cro_tur_army:0 "§Yオスマン§!との相対的な陸軍力の比率が§Y50%§!以上である"
+ cro_tur_army:0 "§Yオスマン§!との相対的な陸軍力の比率が§Y50%§!以上"
  alb_inspired_resistance:0 "鼓舞された抵抗運動"
  bul_independence_title:0 "ブルガリアの独立"
  bul_independence_desc:0 "ブルガリアは再び世界の国々に数えられている。我々は中核となる領域を回復し、独立を安全なものとしなければならない。"
@@ -2031,7 +2031,7 @@
  fla_flemish_cloth_desc:0 "我々の職人たちは我々の商品の需要に追いつくのに苦労している。我々が織物その他の製品の生産を増やすことができなければ、購買者は彼らのニーズのために別の場所に目を向ける可能性があり、それにより我々の経済は台無しになるだろう。我々は工業生産を拡大しなければならない！"
  fla_european_networks_title:0 "ヨーロッパの仲介者"
  fla_european_networks_desc:0 "我々の利益は、[Root.GetName]だけで保護することはできない。我々はどこにでも目と耳を持ち、海外交易の流れと商人の盛衰について報告を受けなければならない。[Root.Capital.GetCapitalName]には、交易について非常に懸念している我々を「まぬけ」と呼ぶ者もいるだろうが、我々が競争力を保つことができるのは、綿密な記録と着実な知識の流れを通してのみである。"
- fla_european_agents_tt:2 " [Root.GetAdjective]のヨーロッパ諸国における諜報網規模が§Y25§!以上である"
+ fla_european_agents_tt:2 " [Root.GetAdjective]のヨーロッパ諸国における諜報網規模が§Y25§!以上"
  emp_ned_leiden_university_fla_title:0 "ライデン大学"
  emp_ned_leiden_university_fla_desc:0 "信頼できる講話と知的自由は、我々の大学の支えとなっている基盤である。我々の尊敬され公開されている高等教育機関への国家支援と奨励が、ヨーロッパ中から才能ある精神を引き付けることは間違いない。"
  itm_italian_renaissance_modifier:0 "イタリア・ルネサンス"
