--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2294,7 +2294,7 @@
  flavor_hab.EVTOPTA3099:0 "異端者を粉砕する。"
  flavor_hab.EVTOPTB3099:0 "譲歩を与える。"
  flavor_hab.EVTNAME3216:0 "ヨーゼフ2世の啓蒙改革"
- flavor_hab.EVTDESC3216:0 "ヨーゼフ2世（1741-90年）は神聖ローマ皇帝（1765-90）であり、ボヘミアとハンガリーの王（1780-90）でもあった。1765年に父親が死去すると、ヨーゼフは皇帝として行動し、母親と共に政治を行ったが、実際の影響力はほとんどなかった。この事実に憤慨し、彼は1780年に母親が死亡するまで旅行に熱中していた。その後、彼は主に、啓蒙主義に由来するものではなく、むしろ彼自身の哲学と原則に基づいて改革を始めた。これらの改革は、出自よりもむしろ功績と忠誠に基づく臣下の創設だけでなく、世襲と聖職者の特権の廃止から成っていた。"
+ flavor_hab.EVTDESC3216:0 "ヨーゼフ2世（1741～90年）は神聖ローマ皇帝（1765～90）、ボヘミア王ならびにハンガリーの王（1780～90）であった。1765年に父親が死去すると、ヨーゼフは皇帝として行動し、母親と共に政治を行ったが、実際の影響力はほとんどなかった。この事実に憤慨した彼は1780年に母親が死去するまで旅行に熱中していた。その後は主に啓蒙主義に由来するものではなく、むしろ彼自身の哲学と原則に基づいて改革を始めた。これらの改革は、出自よりもむしろ功績と忠誠に基づく臣下の創設だけでなく、世襲と聖職者の特権の廃止から成っていた。"
  flavor_hab.EVTOPTA3216:0 "啓蒙の改革"
  flavor_hab.EVTOPTB3216:0 "変更しない。"
  flavor_hab.EVTNAME3328:0 "帝国宮内法院"
@@ -4775,7 +4775,7 @@
  dnz_decision_available_tooltip:1 "決断§Y「プロイセン同盟の縮小」§!が使用可能になりました。\n階級特権§Y「プロイセン同盟への譲歩」§!が使用可能になりました。"
  flavor_klm.d.1:1 "カルムイクの部族民が野営地に向かって馬を走らせるにつれ、蹄の音が雷鳴の如く平野を渡って鳴り響きます。ハーンは小さくとも丈夫な馬から優雅に降り、我々の使節を迎えるために武器を武器を差し出します。彼は、家畜を放牧し、慣習に従って生活するための新しい土地を探し求め、全部族をはるか東方から導いてきたのだと説明しています。\nハーンは、クマ川の草原に彼の部族を定着させるのに最適な場所を見つけたと信じています。クマ川の支配者として、彼は自身の国民がこの土地を独立して支配できるようにするために、戦士を[Root.GetName]に出征しています。彼が話すにつれ、彼の表情は固くなり、ハーンは厳かに前へと進み出ます。彼は会談から離れる前に警告を加えます。彼は今や部族を引き返させることはできません。彼の言葉を受け入れなければ、我々は彼と戦闘で向き合わなければなりません。"
  granada_civil_war.1.t:0 "僭称者が蜂起"
- granada_civil_war.1.desc:0 "ユースフはナスル朝ムハンマド9世の甥である。かつては誰しもに愛されたが、兵を起こし、自らアミールとなろうとしている。\n\n我らが家族間でこのような対立に至ったことは理解の範疇を超えているが、このようなふてぶてしい行動は蛮行と称されるに相応しい。ユースフは吊るされなければならない。"
+ granada_civil_war.1.desc:0 "ユースフはナスル朝ムハンマド9世の甥である。かつては誰しもに愛されたが、兵を起こし、自らアミールとなろうとしている。\n\nどのようにして一族の間でこのような対立に至ったのか我々の理解の範疇を超えているが、この大胆不敵な行動に対してそれ相応の苛烈な態度で臨まなければならない。ユースフを吊らねばならない。"
  granada_civil_war.1.a:0 "戦争だ！"
  granada_civil_war.2.t:0 "対立の停止"
  granada_civil_war.2.desc:0 "苦い内戦も終わりを迎えようとしている。再び我らの偉大な玉座には唯一の首長が座り、いくつもの反乱が鎮圧された。\n\n再びこのような流血沙汰を見る必要が無いことを誰もが願っている。"
@@ -4805,12 +4805,12 @@
  flavor_nah.1.d:1 "夜は火のような、杭で舞い踊る炎のような匂いがします。日中のように感じる夜もあります。今は光が多く、空の中央には月があり、何もかもがより鮮明に見えるのです。夜そのものが生きているような気までするのです。\n男もいます。彼は私たちの村へとやって来て、光が彼を追ってきます。私たちは彼がどういう人物か知っています。学者は私たちにとって知らない人ではありませんが、だからといって彼らが尊敬されていないわけではありません。彼らは過去、私たち、現在、そして未来と結びついています。彼らは私たちを癒し、また貴重な知識を持っています。男は焚き火台に近づき、歌い始めました。"
  flavor_nah.1.a:0 "その夜は静寂のままに。"
  flavor_nah.2.t:1 "救いの手"
- flavor_nah.2.d:1 "[Root.Monarch.GetName]が病気になりました。その声は恐怖で震え、その額は一面汗まみれでした。私たちの新しい学者は朝、君主のテントへと入り、日暮れまで出てきませんでした。彼は私たちの元へとやって来て、このようにはっきりと言いましたー今必要な治癒用の薬草を時間内に見つけられなければ、我が君主はもうダメかもしれない、と｡\n我が部族の志願者がその薬草を集めてくれるとのことです。"
+ flavor_nah.2.d:1 "[Root.Monarch.GetName]が病気になりました。その声は恐怖で震え、その額は一面汗まみれでした。私たちの新しい学者は朝、君主のテントへと入り、日暮れまで出てきませんでした。彼は私たちの元へとやって来て、このようにはっきりと言いましたー今必要な治癒用の薬草を時間内に見つけられなければ、我が君主はもうダメかもしれない、と。\n我が部族の志願者がその薬草を集めてくれるとのことです。"
  flavor_nah.2.a:1 "急がなきゃ！"
  nah_helping_hand:0 "救いの手"
- desc_nah_helping_hand:0 "新しい学者が植物学の知識を教えてくれた｡"
+ desc_nah_helping_hand:0 "新しい学者が植物学の知識を教えてくれた。"
  nah_cautious:0 "慎重な取り組み"
- desc_nah_cautious:0 "儀式に干渉しないことを決めた｡"
+ desc_nah_cautious:0 "儀式に干渉しないことを決めた。"
  flavor_nah.3.t:1 "年を経る"
  flavor_nah.3.d:1 "[Root.Heir.GetName]が大人になる時が来ました。4日間と最後の夜、彼女は部族に女性であることを証明しなければなりません。彼女は、後にどういう人生を歩むことになったとしても、それに耐えられるよう、肉体的にも精神的にも強くなければなりません。\n私たちの正当な支配者として、皆が彼女のホーガンの周辺に集まり、この彼女にとって重要な時間を支援しています。彼女に敬意を表して盛大な祝宴を開きましょう！"
  flavor_nah.3.a:0 "祝宴の時間だ。"
@@ -4820,14 +4820,14 @@
  flavor_nah.4.d:0 "隣のプエブロ族から商人が何人か私たちの村へやってきました。私たちは喜んで彼らを歓迎し、自分たちのホーガンに招待しました。返礼に、有益な商取引が行われました。"
  flavor_nah.4.a:0 "これはきっと、経済発展につながることだろう。"
  nah_pueblo_merchants:1 "上首尾の交易"
- desc_nah_pueblo_merchants:0 "交易関係は今、さらに効率よくなった｡"
+ desc_nah_pueblo_merchants:0 "交易関係は今、さらに効率よくなった。"
  flavor_nah.5.t:1 "黙祷の時間"
  flavor_nah.5.d:1 "今日はたくさんの来賓が私たちの村へと、いらっしゃいました。近くに住む集落の人たちも、自国の文化の中で最も重要な催しの一つに招待されました。今日の午前には大会合が開かれ、我が24人の最も偉大な指導者たちが一堂に会し、私たちの特別な国家政府について合意に達する見込みです。\n彼らの半分は戦争で敵を倒し、戦士たちを指揮した者たちです。残りの半分は平時に我が民衆を成長と繁栄に向けて賢く導いてきた者たちです。今日、彼らは一緒に私たち部族の将来に関する重要な決断を行います。"
  flavor_nah.5.a:0 "戦争に備えねば。"
  flavor_nah.5.b:0 "この平和な時代を受け入れるべきだ。"
  opinion_naachid:0 "会合の開催"
  flavor_nah.6.t:0 "コマンチの略奪者"
- flavor_nah.6.d:0 "今朝、地平線上に砂塵の雲が見えます。この薄暗い光の下では、太陽がまだすべての地を統治していますが、一日が肌寒く感じられます。日の出の直後、砂塵に混じって不穏な音が聞こえ、その中からようやく人の姿が現れました｡犬猿の仲であるコマンチ族が、捕虜を求めて私たちに攻撃を仕掛けてきたのです。"
+ flavor_nah.6.d:0 "今朝、地平線上に砂塵の雲が見えます。この薄暗い光の下では、太陽がまだすべての地を統治していますが、一日が肌寒く感じられます。日の出の直後、砂塵に混じって不穏な音が聞こえ、その中からようやく人の姿が現れました。犬猿の仲であるコマンチ族が、捕虜を求めて私たちに攻撃を仕掛けてきたのです。"
  flavor_nah.6.a:0 "多勢に無勢だ！"
  flavor_nah.6.b:0 "奴等は我々の軍に太刀打ちできない。"
  flavor_pue.1.t:0 "古代の人々"
@@ -4848,7 +4848,7 @@
  flavor_pue.4.d:1 "クリフ・パレスの壁は、何十年どころか何百年もの間、手付かずの状態で放置されていました。空っぽの部屋は、静寂のみで満たされています。しかし今、私たちはこの場所に戻ってきました。私たちの子供たちは、複雑に入り組んだ廊下を遊びながら走り、どの階段からも笑い声が聞こえてきます。赤、緑、白、黄、茶、これらの色はすべて、最重要の部屋を彩る素晴らしい壁画に使われています。そのほぼ全てが、狩猟の場面や祝宴、踊り、単純な線と螺旋となっています。しかし、1つだけ、他のものとは明らかに似ていないものがあります。巨大なクモが入り口にその眼を配置する形になっているのです。"
  flavor_pue.4.a:0 "こんなに立派な絵があったのか！復元すべきだな。"
  flavor_pue.4.b:1 "保全活動はこれからも続くことだ。"
- flavor_pue.4.c:0 "無視しましょ｡"
+ flavor_pue.4.c:0 "無視しましょ。"
  pue_spider_grandmother:0 "スパイダー・グランドマザー"
  desc_pue_spider_grandmother:0 "スパイダー・グランドマザーは我が尽力に見返りを与えてくれた。"
  flavor_pue.5.t:0 "儀式の踊り子"
@@ -4862,9 +4862,9 @@
  flavor_sio.1.d:0 "ヨーロッパ人の商人の一団が我が村に近づいてきました。最初は顔色も青白く、言葉も変なので、長老たちは話すことさえ渋々行っていましたが、彼らが持っていた興味深い商品を見て、何とか納得してくれたようです。しかし、金や富だけにこだわるのは、私たちが決して歩まない利己的な道であり、まずは友好的な関係を築く必要があります。私たちは我が部族への門戸を開くべきですし、彼らはその招待を受け入れることでしょう。"
  flavor_sio.1.a:0 "その門戸を開けたままとしよう。"
  sio_foreigner_trade:0 "外国人との交易"
- desc_sio_foreigner_trade:0 "外国人との経済関係は、交易の活性化に一役買った｡"
+ desc_sio_foreigner_trade:0 "外国人との経済関係は、交易の活性化に一役買った。"
  flavor_sio.2.t:0 "楽しい狩場へ"
- flavor_sio.2.d:1 "彼らは言います、寒いな、と｡彼らは言います、人はゆっくりと全ての感情を失い、時にはそれさえ気づかずに、残るのは浅く冷たい殻だけだ、と。無感覚ーそれだけなのです。今日は寒い朝で、まるで水の毛布のように弱々しい霧雨がこの村を覆っていて、風もなく、ただ静寂が静止しているのです。[Root.Monarch.GetName]は死にました。\n葬儀の準備をしなければなりません。我が地域社会の中央に長い木の幹で作成された演台が立てられ、老若男女問わず、一刻も早く式が執り行われるように急いで手伝っています。彼らは、[Root.Monarch.GetName]の遺体を服で包み、まるでまだ生きているかのようにし、生前大切にしていた多くの私物と一緒に遺体を演台の上に置きました。\n葬儀が執り行われ、すべてが冷たくなり、[Root.Monarch.GetName]の統治が終わりました。雨が降っています。"
+ flavor_sio.2.d:1 "彼らは言います、寒いな、と。彼らは言います、人はゆっくりと全ての感情を失い、時にはそれさえ気づかずに、残るのは浅く冷たい殻だけだ、と。無感覚ーそれだけなのです。今日は寒い朝で、まるで水の毛布のように弱々しい霧雨がこの村を覆っていて、風もなく、ただ静寂が静止しているのです。[Root.Monarch.GetName]は死にました。\n葬儀の準備をしなければなりません。我が地域社会の中央に長い木の幹で作成された演台が立てられ、老若男女問わず、一刻も早く式が執り行われるように急いで手伝っています。彼らは、[Root.Monarch.GetName]の遺体を服で包み、まるでまだ生きているかのようにし、生前大切にしていた多くの私物と一緒に遺体を演台の上に置きました。\n葬儀が執り行われ、すべてが冷たくなり、[Root.Monarch.GetName]の統治が終わりました。雨が降っています。"
  flavor_sio.2.a:0 "本当に寒い朝だ。"
  flavor_sio.3.t:0 "生きた功績"
  flavor_sio.3.d:1 "先日、先代の支配者がこの世を去りました。葬儀は厳粛な儀式で、私たちの部族の間ではいまだに悲しい思い出となっています。さて今では、すでに十分に時が経ち、この喪に服す期間もようやく終わりを迎えます。先代の支配者を称えるために、もう一度儀式を執り行うべきでしょうか？"
@@ -4881,7 +4881,7 @@
  flavor_sio.5.d:1 "私たち民族の18の異なる国家が東の地で行われる大宴会に召集されました。最も優れた強大な部族の仲間たちが集まり、暖かな祝宴を互いに喜び、贈り物の交換、共通の祈り、競技、そして…説得的対話を通して新たな同盟関係を築きました。"
  flavor_sio.5.a:0 "これは価値あることだろう。"
  sio_feast:0 "死者の饗宴"
- desc_sio_feast:0 "自国に評判が改善された｡"
+ desc_sio_feast:0 "自国に評判が改善された。"
  sio_feast_of_the_dead:0 "死者の饗宴を祝賀した"
  flavor_che.1.t:0 "グレート・スモーキー山脈"
  flavor_che.1.d:0 "その山々に私たちはいます。その岩肌に居住し、下草に隠れ、その山の動物として呼吸をし、同じくその山に生きる動物を狩るのです。その山は常にここにいますが、私たちはそうではありません。今朝、私たちの最年少の男性の集団は、長老が前に話していた古代の伝説ー人の目には見えない魔法の湖を追い求めて山へと入っていきました。\n彼らは勝ち誇って戻ってきたみたいです。歓声が村のあちこちから聞こえてきましたからね。実際、彼らは湖を見つけたのです。その湖の水面は、まるで磨かれた月の如く完璧に輝いていました。彼らは、これが伝説の予言にあったものだと固く信じていて、その熱意は今や他の部族にも伝わりました。"
@@ -4935,7 +4935,7 @@
  totemism_flavor.1.d:0 "村では不穏な噂が流れています。まだスヤスヤ眠っている[Root.Monarch.GetName]には誰も知らせようとしません。衛兵たちはくじを引いて、誰が不幸の使者になるかを決めています。[Root.Consort.GetName]が全くどこにも見当たりません。"
  totemism_flavor.1.a:0 "彼女を捜索するため、何人かの兵を派遣すべきだ。"
  totemism_flavor.1.b:0 "この事態に当たらせるため探検家を雇うべきだ。"
- totemism_flavor.1.c:0 "支配者が自分で行くと強く要求している｡"
+ totemism_flavor.1.c:0 "支配者が自分で行くと強く要求している。"
  totemism_flavor.1.e:0 "きっと別の伴侶が見つかるさ。"
  totemism_flavor.2.t:0 "配偶者が見つかった！"
  totemism_flavor.2.d:0 "[orpheus_province.GetName]の陽気な人たちの中に、見覚えのある顔が目に飛び込んできました。彼女は露骨なまでに変装を試みていますが、[Root.Consort.GetName]を見間違えることなんて不可能です。しかし、私たちの部下が彼女に近づくと…異常な行動に直面しました。彼女は早口で静かに話しますが、その言葉の節々に神々に関する言及がなされているのです。"
@@ -4944,12 +4944,12 @@
  totemism_flavor.2.b:0 "えっとー…多分邪魔すべきじゃないよ。"
  totemism_flavor.2.c:0 "我が支配者に彼女と話をしてもらうべきだろう。"
  totemism_flavor.3.t:0 "奇妙な振舞い"
- totemism_flavor.3.d:0 "[Root.Monarch.GetName]との再会後も、[Root.Consort.GetName]の振舞いは正常に戻らず、それどころか真逆でさらにイカれています。ある夜、彼女はテントを出て村の隅の方まで歩き、夫がついてきていることに気づいても振り向かず、しかしその声は夫の存在を認知していることを暗に示しています。\n「来て、」彼女は言います。「是非見て欲しいものがあるの｡」"
+ totemism_flavor.3.d:0 "[Root.Monarch.GetName]との再会後も、[Root.Consort.GetName]の振舞いは正常に戻らず、それどころか真逆でさらにイカれています。ある夜、彼女はテントを出て村の隅の方まで歩き、夫がついてきていることに気づいても振り向かず、しかしその声は夫の存在を認知していることを暗に示しています。\n「来て、」彼女は言います。「是非見て欲しいものがあるの」"
  totemism_flavor.3.a:0 "彼女について行くぞ。"
  totemism_flavor.3.b:0 "彼女を行かせよう。"
  totemism_flavor.4.t:0 "前へと進む"
  totemism_flavor.4.d:0 "[Root.Monarch.GetName]は近くの川まで配偶者の後を追っていきました。そこで、彼女はカヌーで出航していました。支配者は彼女の後を追い続けることにし、彼女のカヌーが見えなくなってすぐに出航しました。岸辺の草木はどんどん深くなり、今まで聞いたこともない不可解な音が聞こえます。[Root.Monarch.GetName]は安定した速度で流れる水の流れに注視しようとしましたが、すぐに別のもっとはっきりとした音に気を逸らされてしまいます。彼は誰かの声…あるいは、振り返るなという何者かの声が聞こえた気がしました。"
- totemism_flavor.4.a:0 "見るな｡"
+ totemism_flavor.4.a:0 "見るな。"
  totemism_flavor.4.b:0 "振り返れ。"
  totemism_flavor.5.t:0 "二度と還らず"
  totemism_flavor.5.d:0 "[Root.Consort.GetName]は飛び出していき、村の住人たちは二度と彼女の顔を見ることはないでしょう。彼女の考えは実にハッキリしてますから、それを尊重せねばなりません。"
@@ -4957,8 +4957,8 @@
  totemism_flavor.5.d3:0 "村に連れ戻された[Root.Consort.GetName]は、自身に振るわれた暴力にどう見ても不満を抱いてます。誰とも口をききませんし、食事もほとんど食べません。厳しい監視下に置かれているにもかかわらず、[Root.Monarch.GetName]があくる日に目を覚ますと…再び彼女がいなくなっていることに気づきます。"
  totemism_flavor.5.a:0 "[Root.Monarch.GetName]の心は悲しみでいっぱいだ。"
  totemism_flavor.6.t:0 "ようやくの再会"
- totemism_flavor.6.d:0 "[Root.Monarch.GetName]は、カヌーの端にしっかりしがみつき、好奇心に流されないように内なる力を振り絞ります｡川が流れ込む湖に到着すると、カヌーのすぐ横に立って微笑む妻の姿を見つけます。激しい恐怖は消え、彼は彼女に抱きつきに走ります。激しい愛が彼の心に押し寄せ、すべてが元通りになるという希望が生まれます。\n「ありがとう、」彼女が呟きます。「私を信じてくれて。」"
- totemism_flavor.6.a:0 "[Root.Monarch.GetName]は深呼吸してこう呟く｡「やっと一緒になれたね。」"
+ totemism_flavor.6.d:0 "[Root.Monarch.GetName]は、カヌーの端にしっかりしがみつき、好奇心に流されないように内なる力を振り絞ります。川が流れ込む湖に到着すると、カヌーのすぐ横に立って微笑む妻の姿を見つけます。激しい恐怖は消え、彼は彼女に抱きつきに走ります。激しい愛が彼の心に押し寄せ、すべてが元通りになるという希望が生まれます。\n「ありがとう、」彼女が呟きます。「私を信じてくれて」"
+ totemism_flavor.6.a:0 "[Root.Monarch.GetName]は深呼吸してこう呟く。「やっと一緒になれたね」"
  tot_didnt_look_back:0 "振り返らず"
  desc_tot_didnt_look_back:0 "[Root.Monarch.GetName]の信念は揺るがないことが証明された。"
  totemism_flavor.7.t:0 "[Root.Monarch.GetName]は声を失う"
@@ -4970,7 +4970,7 @@
  totemism_flavor.8.d:0 "ある日、その陽気に誘われて、国民の中で最も幼い者たちは川の近くで朝を過ごしました。遊んだり泳いだり、昔の歌を歌ったりしました。川の下流へと進んでいくと、何人かは笑い声を隠そうと、近くの洞窟に隠れることにしました。残りの者たちが彼らを探しに来ると、彼らは洞窟の中心に向かって奥へ奥へと進んでいき、地下に流れを感じました。その場の熱気と湿気の動きから、彼らはその流れに沿って進み、祖先の聖地の入り口と思われる場所を発見しました。"
  totemism_flavor.8.a:0 "この場所をさらに調査すべきだな。"
  totemism_flavor.8.b:0 "この場所は放っておいた方が良さそうだ。"
- totemism_flavor.8.a.tt:0 "伝説の地は、[legendary_location.GetName]州に位置する｡"
+ totemism_flavor.8.a.tt:0 "伝説の地は、[legendary_location.GetName]州に位置する。"
  tot_legendary_location:0 "聖なる洞窟"
  desc_tot_legendary_location:0 "伝説の先祖の地はこの州に存在した。"
  totemism_flavor.9.t:0 "洞窟探検"
@@ -4979,24 +4979,24 @@
  totemism_flavor.10.t:0 "洞窟の保全"
  totemism_flavor.10.d:0 "この新発見の重要性を認めた上で、私たちの長老会議は、この場所をしっかり保存し、必要なものを遮蔽する必要があると合意しました。これにより、土砂崩れなどの自然災害を防ぎ、噂が広まった後に外国人がこの場所を訪れるのを防ぐことができます。"
  totemism_flavor.10.a:0 "顧問を一人派遣すべきだろう。"
- totemism_flavor.10.b:0 "[Root.Heir.GetName]が、この重要な仕事を引き継ぐと強く要求している｡"
+ totemism_flavor.10.b:0 "[Root.Heir.GetName]が、この重要な仕事を引き継ぐと強く要求している。"
  totemism_flavor.10.c:0 "管理するための品をいくつか寄贈すべきだろう。"
  totemism_flavor.10.e:0 "何百年もの間、維持できたんだ。きっとこのままにしておくのがいいんだ。"
  tot_legendary_location_maintained:0 "聖なる洞窟の保全"
  desc_tot_legendary_location_maintained:0 "この聖地を保全する私たちの努力は、見逃されるものではない。"
  totemism_flavor.11.t:0 "伝説終焉の場所"
  totemism_flavor.11.d:0 "時代は変わりました。私たちの伝統はかつてのものとは違います。評議会は、神聖な洞窟を維持することは、先人たちに失礼であるということで合意しました。私たちは今、前に進み、新しい冒険を受け入れます。"
- totemism_flavor.11.a:0 "この地で、私たちの歩む道は分岐する｡"
- totemism_flavor.11.a.tt:0 "この場所の恩恵が喪失する｡"
+ totemism_flavor.11.a:0 "この地で、私たちの歩む道は分岐する。"
+ totemism_flavor.11.a.tt:0 "この場所の恩恵が喪失する。"
  tot_legend_abandoned:0 "伝説の放棄"
  desc_tot_legend_abandoned:0 "別れを告げるというのはいつでも難しいものだ。"
- totemism_flavor.12.a.tt:0 "結果によっては、後継者が死亡する可能性がある｡"
+ totemism_flavor.12.a.tt:0 "結果によっては、後継者が死亡する可能性がある。"
  totemism_flavor.12.t:0 "簡便な土砂崩れ"
  totemism_flavor.12.d:0 "[Root.Monarch.GetName]のテントに息も絶え絶えの使者が到着しました。[Root.Heir.GetName]が洞窟を巡回中に土砂崩れが発生し、その体は岩に埋もれかけているとのことです。何人かの戦士がその除去を手伝い、命を助けようとしていますが、最高の学者の援助が今すぐに必要です。"
  totemism_flavor.12.a:0 "後継者のために祈ろう。"
  totemism_flavor.13.t:0 "なぜ食糧が無くなったんだ！？"
  totemism_flavor.13.d:0 "領内の豊作を祝うために、親切な隣人たちを招いて大饗宴を開くことにしました。何事もなく穏やかな夜に見えてましたが、それを打ち砕く事態が起こりました。大半の食料が完全に消え去っていることが発見されたのです。私たちの最高の諜報員が原因を突き止めようとする間、私たちは来賓に何かを饗する必要があります。"
- totemism_flavor.13.a:0 "今すぐ幾分かの追加食料を確保する必要がある｡"
+ totemism_flavor.13.a:0 "今すぐ幾分かの追加食料を確保する必要がある。"
  totemism_flavor.13.b:0 "食糧を民から受け取ろう。彼らはこの状況を理解せねばならない。"
  totemism_flavor.13.c:0 "今あるもので賄おう。"
  opinion_great_feast:0 "大饗宴"
@@ -5018,12 +5018,12 @@
  totemism_flavor.17.b:1 "長老たちは、[Root.Monarch.GetName]の性格について憂いている。"
  totemism_flavor.17.c:0 "どう転ぶかは見てのお楽しみ…"
  tot_dedicated_ruler:0 "熱心な支配者"
- desc_tot_dedicated_ruler:0 "自国の支配者は、精神性の理解に多大な努力をしている｡"
+ desc_tot_dedicated_ruler:0 "自国の支配者は、精神性の理解に多大な努力をしている。"
  tot_shameful_ruler:0 "恥辱の支配者"
  desc_tot_shameful_ruler:0 "精神的な取り組みに関して、自国の支配者の性格は不向きだった。"
  totemism_flavor.18.t:0 "戦利品"
  totemism_flavor.18.d:0 "昨今の戦争は、自国の国民に犠牲が出るだけでなく、領内の土地にも損害を与えています。領内の作物は、自軍の兵糧として使用され、土壌の一部は敵によって燃やされました。大飢饉が国民を襲い、彼らは解決策を求めています。"
- totemism_flavor.18.a:0 "この事態は明らかに、評議会に先見の明が無かったせいだ｡"
+ totemism_flavor.18.a:0 "この事態は明らかに、評議会に先見の明が無かったせいだ。"
  totemism_flavor.18.b:0 "この困難な時代、神々に助けを乞わねば。"
  tot_great_famine:0 "大飢饉"
  desc_tot_great_famine:0 "戦争による大飢饉で、自国の首都の不穏度が高まっている。"
