--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -17,7 +17,7 @@
  NUM_MORE_OR_EQUAL_FEDERATION_ADVANCEMENTS_TRIGGER:0 "連邦の進歩を$NUM|Y$以上制定する必要があります。"
  ANY_FEDERATION_MEMBER:0 "いずれかの連邦加盟国：\n"
  ALL_FEDERATION_MEMBER:0 "全ての連邦加盟国：\n"
- FEDERATION_SIZE_LESS_THAN:0 "連邦メンバーが$SIZE|Y$未満\n"
+ FEDERATION_SIZE_LESS_THAN:0 "連邦メンバーが$SIZE|Y$未満である。\n"
  FEDERATION_SIZE_MORE_THAN:0 "$SIZE|Y$以上の連邦加盟国がある。\n"
  ENABLE_FEDERATION_OFFENSIVE_WARS:0 "連邦の攻撃戦争を有効にする\n"
  DISABLE_FEDERATION_OFFENSIVE_WARS:0 "連邦の攻撃戦争を無効にする\n"
@@ -93,7 +93,7 @@
  ancestor_calm_personality:0 "穏和"
  ancestor_careful_personality:0 "慎重"
  ancestor_secretive_personality:0 "秘密主義者"
- ancestor_intricate_web_weaver_personality:0 "複雑な諜報網織工"
+ ancestor_intricate_web_weaver_personality:0 "緻密な策略家"
  ancestor_benevolent_personality:0 "慈善"
  ancestor_zealot_personality:0 "狂信者"
  ancestor_pious_personality:0 "敬虔"
