--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -511,7 +511,7 @@
  bur_liege_desc:0 "歴史的に、リエージュ司教領は、バチカンと神聖ローマ帝国で強い発言権を持ってきた。我々がこの声を支配するならば、我々の利益をより良く表明することができる。"
  bur_subjects_title:0 "従属国の鎮静"
  bur_subjects_desc:0 "非常に多くの壊れやすい連合の指導国として、我々は不忠な従属国を持つことはできない。我々はロタリンギアにおける我々の主張を考慮しているが、我々のあらゆる協力者が支持され、行動する準備ができていることを保証する必要がある。"
- bur_subjects.tooltip:1 "すべての従属国の独立欲求が§Y1.00%§!より低い"
+ bur_subjects.tooltip:1 "すべての従属国の独立欲求が§Y1.00%§!未満"
  bur_romandie_title:0 "トランスユラニアの再請求"
  bur_romandie_desc:0 "上ブルゴーニュの王国は十分に長い間、帝国の支配下にある。過去において、それはブルゴーニュで完全に3分の1を構成しており、我々に返還される必要がある。"
  bur_cisjurania_title:0 "アルルの王国"
@@ -680,10 +680,10 @@
  trade_company_region_abroad_tooltip:2 "自国の首都と異なる大陸に、§Y5§!州以上領有する§Y交易会社地域§!が§Y3§!つ以上ある。"
  eng_establish_trade_in_home_cot_title:1 "海峡の独占"
  claiming_orkney_title:1 "北部諸島を請求"
- nw_modern.tooltip:0 "隣国が以下の条件を満たす：\n§Y封建制§!を受容している\n技術の先行が§Y1§!未満"
+ nw_modern.tooltip:0 "隣国：\n§Y封建制§!を受容している\n技術の先行が§Y1§!未満である。"
  unite_manchu_title:0 "女真族の統一"
  unite_manchu_desc:1 "この地方の主要州を征服することにより、すべての満州の民を支配するための正当な大義名分を得た。"
- new_world_sunset_tooltip:0 "§Y[Root.GetName]§!が§Y5§!以上のヨーロッパの州を所有する"
+ new_world_sunset_tooltip:0 "§Y[Root.GetName]§!がヨーロッパの州を§Y5§!州以上所有する。"
  vij_local_temples_title:0 "地方神の後援"
  vij_local_temples_desc:0 "各々の地域での神の教えは異なり、各々の崇拝は異なるが、ヒンドゥー教徒は神々との関連を持つ。征服した人々へ我が支配の博愛を見せるため、彼らの都市に寺院を建立することによって彼らの神々を後援すべきだ。"
  vij_jains_mission_title:0 "ジャイナ教社会の保護"
@@ -1517,11 +1517,11 @@
  gc_cas_spa_new_spain_desc:0 "恒久的かつ組織的な植民地の副王位を設立することによって、メキシコ湾にまで我が支配を真に合併する時が来た。アウディエンシアは新世界での最高裁判所となり、メキシコの金持ちがスペインまで安全に進めるよう保証する。"
  gc_cas_spa_florida_title:0 "フロリダの要塞化"
  gc_cas_spa_florida_desc:0 "ヌエバ・エスパーニャの北にあるフロリダの湿地帯は金が豊富でないが、将来の植民地の秩序を守る上で不可欠なものだ。その地域へ移住し、要塞化せねばならない。"
- fortified_florida_tooltip:0 "§Yサウスイースト§!もしくは§Y西フロリダ§!地方にて、§Y[Root.GetName]§!またはその従属国が領有し、要塞レベルが§Y3§!以上の州はすべて、§Y要塞化されたフロリダ§!を§Y20§!年間獲得し、以下の効果を得ます：\n州の防衛 §G＋20%§!"
+ fortified_florida_tooltip:0 "§Yサウスイースト§!もしくは§Y西フロリダ§!地方にて、§Y[Root.GetName]§!またはその従属国が領有し、要塞レベルが§Y3§!以上の州はすべて、§Y要塞化されたフロリダ§!を§Y20§!年間獲得し、以下の効果を得ます：\n州の防衛：§G＋20%§!"
  cas_spa_florida_forts.tooltip:0 "自国か従属国が§Yサウスイースト§!地方あるいは§Y西フロリダ§!地域において、§Y3§!レベル以上の要塞がある州を§Y3§!州以上領有する。"
  gc_cas_spa_california_title:0 "カリフォルニアの植民地化"
  gc_cas_spa_california_desc:0 "カリフォルニアへの進出拡大は、ヌエバ・エスパーニャの国境を自然と伸ばすこととなる。根も葉もないが、この地域には前人未踏の金鉱床があると噂されており、もし本当に存在すれば、確保せねばならない地域である。"
- miss_colonize_california:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、§Yカリフォルニア§!植民地域に、完全に植民地化された州を§Y5§!州以上領有する"
+ miss_colonize_california:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、§Yカリフォルニア§!植民地域に、完全に植民地化された州を§Y5§!州以上領有する。"
  gc_cas_spa_new_granada_title:0 "グラナダ新王国"
  gc_cas_spa_new_granada_desc:1 "スパニッシュ・メイン南部の領域は、一貫した行政法人として組織されねばならず、それはグラナダ新王国と名付けられる。ボゴタから植民地に法的権限を委譲する為、王立のアウディエンシアが任命されなければならない。"
  gc_cas_spa_potosi_title:0 "ポトシの銀"
