--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -147,10 +147,10 @@
  move_capital_to_rome:0 "ローマに遷都"
  move_capital_to_rome_title:0 "ローマに遷都"
  move_capital_to_rome_desc:0 "ついにローマの州と市がローマ教皇領として復帰した。聖座を取り戻す時が来た。"
- DIPLOMATIC_RELATIONS_LESS_THAN:0 "外交関係が右記未満である："
- DIPLOMATIC_RELATIONS_AT_LEAST:0 "外交関係が右記以上である："
- FREE_DIPLOMATIC_RELATIONS_LESS_THAN:0 "自由な外交関係が右記未満である："
- FREE_DIPLOMATIC_RELATIONS_AT_LEAST:0 "自由な外交関係が右記以上である："
+ DIPLOMATIC_RELATIONS_LESS_THAN:0 "外交関係が右記未満："
+ DIPLOMATIC_RELATIONS_AT_LEAST:0 "外交関係が右記以上："
+ FREE_DIPLOMATIC_RELATIONS_LESS_THAN:0 "外交関係の空枠が右記未満："
+ FREE_DIPLOMATIC_RELATIONS_AT_LEAST:0 "外交関係の空枠が右記以上："
  CORE_EXPLAIN_LOSE_CULTURE_GROUP_NOLOSE:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!と同じ文化グループです。§Y$PROV$§!を中核州として失うことはありません。"
  CORE_EXPLAIN_LOSE_PRIMARY_TAG_NOLOSE:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!の代表的な国家です。§Y$PROV$§!を中核州として失うことはありません。"
  HISTORY_DISCOVERED_BY_GROUP:0 "§Y$GROUP$§W圏によって発見される"
