--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -161,7 +161,7 @@
  swe_swedish_allies_desc:0 "国民は独立を熱望しているが、自軍だけではデンマークからの解放を強要するには不十分かもしれない。スカンディナヴィア外でカルマル同盟の破滅を望んでいる同盟者を見つける必要がある。"
  swe_declare_independence_title:0 "独立宣言！"
  swe_declare_independence_desc:0 "ついに独立の時が来た！この無能なる連合を打ち破り、スウェーデンを支配するにふさわしい王位を創設しよう！"
- swe_declare_independence_ct:0 "§Y独立戦争§!に勝利した場合、ミッション「§Yドイツの海岸線§!」、「§Y東方への窓口§!」、「§Yヴァリャーグの遺産§!」に必要となる州全てに恒久的な請求権が付与されるイベントが発生する。"
+ swe_declare_independence_ct:0 "§Y独立戦争§!に勝利した場合、ミッション「§Yドイツの海岸線§!」、「§Y東方への窓口§!」、「§Yヴァリャーグの遺産§!」に必要となる州すべてに恒久的な請求権が付与されるイベントが発生する。"
  swe_claim_norwegian_crown_title:0 "ノルウェーの王位"
  swe_claim_norwegian_crown_desc:0 "カルマル同盟は、自国の独立によって機能不全に陥っているが、デンマークとノルウェー間は蜜月関係にあるため、未だに存続している。デンマーク王は否定したいようだが、ノルウェーはデンマーク政府から見ると、独自の本当の王国というより、ほぼ州のように見えている。ノルウェー人をデンマークの圧政から解放し、一度は思いやりのある君主に治めてもらうことが、良き隣人としての我が責務である。"
  swe_fall_of_denmark_title:0 "デンマークの陥落"
@@ -376,7 +376,7 @@
  flavor_swe.108.b:0 "[Root.GetBurghersOrFallbackName]の申し出を受け入れよう。"
  swe_in_debt_with_the_burghers_tt:0 "§Yこの補正は、§Y[Root.GetBurghersOrFallbackName]に返済する、もしくは無効とすることによってのみ解除できます。§!\n\n債務返済のためには、以下の条件を満たして、決断を実行しなければなりません：\n収入§Y1§!年分のダカットを保有している\n[Root.GetBurghersOrFallbackName]の議題を§Y4§!つ完了する、もしくは、直轄地§Y10%§!を有している"
  flavor_swe.108.c:0 "[Root.GetChurchOrFallbackName]の申し出を受け入れよう。"
- swe_in_debt_with_the_clergy_tt:0 "§Yこの補正は、§Y[Root.GetChurchOrFallbackName]に返済する、もしくは無効とすることによってのみ解除できます。§!\n\n債務返済のためには、以下の条件を満たして、決断を実行しなければなりません：\n教会もしくは大聖堂が建てられた州を§Y5§!州以上領有している\n教皇への影響力が§Y100§!以上である\n威信が§Y40§!である\n[Root.GetChurchOrFallbackName]の議題を§Y4§!つ完了する、もしくは、直轄地§Y10%§!を有している"
+ swe_in_debt_with_the_clergy_tt:0 "§Yこの補正は、§Y[Root.GetChurchOrFallbackName]に返済する、もしくは無効とすることによってのみ解除できます。§!\n\n債務返済のためには、以下の条件を満たして、決断を実行しなければなりません：\n教会もしくは大聖堂がある州を§Y5§!州以上領有している\n教皇への影響力が§Y100§!以上\n威信が§Y40§!\n[Root.GetChurchOrFallbackName]の議題を§Y4§!つ完了する、もしくは、直轄地§Y10%§!を有している"
  flavor_swe.108.d:0 "そんなお世話など必要ありません、ありがとうございました。"
  flavor_swe.1080.t:0 "[Root.Capital.GetName]の血浴の結果"
  flavor_swe.1080.desc:0 "通常、どの国の階級も共通目的のために説得するのことは難しいものですー特に、彼らの宗主が多くの特権や特別な権利を与えている場合はなおさらです。しかし、自国の階級たちー[Root.GetChurchOrFallbackName]、[Root.GetBurghersOrFallbackName]、[Root.GetNobilityOrFallbackName]ーは残忍な[Root.Capital.GetName]の血浴の目撃者、そして犠牲者となったのです。彼らは[Root.GetName]に忠誠を誓い、自国の独立への努力に対して全面協力すると断言しています。"
@@ -1808,7 +1808,7 @@
  teu_pru_strengthen_mercantilism_tt:0 "§Y西プロイセン§!地域、§Y東プロイセン§!地域、§Yジェマイティヤ§!地域、§Yクロニア§!地域、§Yリヴォニア§!地域、§Yエストニア§!地域の§Y河口§!がある州か、もしくは§Y交易中心地§!の州すべてが、§Y[Root.GetName]§!の中核州として領有していて、かつ、§Y交易§!系の建物が建造されている。"
  teu_pru_manufactories_for_prussia_title:1 "[Root.GetPreviewColorTEU]工場の建設[Root.GetPreviewColorTEU_end]"
  teu_pru_manufactories_for_prussia_desc:0 "立派な軍隊には強力な経済が必要だ。経済が軍の成長に歩調を合わせられるよう、工場を建設すべきだ。"
- teu_pru_manufactories_for_prussia_tt:0 "基本生産§Y6§!以上の工場から"
+ teu_pru_manufactories_for_prussia_tt:0 "基本生産§Y6§!以上の工場から。"
  teu_pru_employ_advisors_title:1 "[Root.GetPreviewColorTEU]有能な閣僚[Root.GetPreviewColorTEU_end]"
  teu_pru_employ_advisors_desc:0 "[Root.GetName]は、常に[Root.Monarch.GetTitle]に頼ることはできない。結局、我が[Root.Monarch.GetTitle]はまだ人間であり、そのため人為的な過失に影響されやすい。必要なことは、空白の時代にも自国が確実に機能するための、有能な顧問たちからなる内閣だ。"
  teu_crusader_clergy_influence_title:1 "[Root.GetPreviewColorTEU][Root.GetChurchOrFallbackName]特権の付与[Root.GetPreviewColorTEU_end]"
@@ -2575,8 +2575,8 @@
  rig_the_baltic_bank_desc:0 "交易と商業は、宗教に次いで国家にとって最も重要な要素である。価値の高いダカットの力なくして、国家は国民を管理し続けることも、宿敵に対して力を発揮することもできない。商業の達人となって、リガの豊かな未来を確保するのだ。"
  rig_finance_great_powers_title:0 "経済の列強"
  rig_finance_great_powers_desc:0 "富を使用できていないとすると、一体富に何の意味があるのだろうか？この世界の列強は、大軍隊と大帝国を持っているが、その力は国庫によって制限されている。このことを利用し、列強を自国の富の操り人形に変えてしまうのだ。"
- rig_finance_great_powers_ct:0 "列強：\n　補助金による収入が全体の§Y10.0%§!以上である"
- rig_finance_great_powers_dt:0 "開発度§Y300§!以上の国家：\n　補助金による収入が全体の§Y10.0%§!以上である"
+ rig_finance_great_powers_ct:0 "列強：\n　補助金収入が全体の§Y10.0%§!以上"
+ rig_finance_great_powers_dt:0 "開発度§Y300§!以上の国家：\n　補助金収入が全体の§Y10.0%§!以上"
  rig_finance_great_powers_tt:1 "既知の国家で、§Y[Root.GetName]§!から収入の§Y5%§!の補助金を受け取っている国家に対して§Y[Root.GetName]§!の評価を§G150§!獲得します。"
  rig_improve_papal_relations_title:0 "教皇の大使館"
  rig_improve_papal_relations_desc:0 "我が[Root.GovernmentName]は教皇の権威から遠く離れており、そのため教皇庁に影響を与えることは難しい。リガに教皇庁用の大使館を設立し、教皇庁との信頼できる通信手段を提供し、自国の枢機卿を置いておくべきだろう。"
@@ -2701,7 +2701,7 @@
  swe_sca_secure_electors_tt:0 "報酬はミッションの達成条件により変化します。\n\n選帝侯の支援を得ることでミッションを達成した場合、補正「§Y帝冠の獲得§!」を§Y15年間§!獲得し、以下の効果を得ます：\n年間威信：§G+1.00§!\n外交評判：§G+1.00§!\n\n上の条件ではない場合、§Yノイマルク地域§!、§Yミッテルマルク地域§!、§Yザクセン＝アンハルト地域§!、§Yニーダーザクセン地域§!、§Yヴェーザー地域§!、§Yフリースラント地域§!、§Yホラント地域§!、§Y北ブラバント地域§!に恒久的な請求権を獲得します。"
  swe_sca_low_countries_title:0 "低地地方の確保"
  swe_sca_low_countries_desc:0 "低地地方にはオランダ人が住んでいる。彼らは海運と重商主義でよく知られた民族である。彼らのイギリス海峡での交易によって、時折、リューベックにおける自国の利益が削られることもあったが、普段は互いにほぼ交流がない。\nしかし、ドイツへと勢力の拡大を始めた今こそ、オランダ人も自国の範囲内にいることは明らかだ。神聖ローマ帝国との立場によって、彼らを帝国の一部とするか、あるいは自領の一部とするかを決めるべきだ。"
- swe_sca_low_countries_tt:0 "§Y北ブラバント地域§!、§Yフリースラント地域§!、§Yホラント地域§!の州：\n 以下のいずれかを満たす：\n　領有国がHRE構成国であり、§Y[Root.GetName]§!の評価が§Y100§!以上である\n　領有国が§Y[Root.GetName]§!かその従属国である"
+ swe_sca_low_countries_tt:0 "§Y北ブラバント地域§!、§Yフリースラント地域§!、§Yホラント地域§!の州：\n 以下のいずれかを満たす：\n　領有国がHRE構成国であり、§Y[Root.GetName]§!の評価が§Y100§!以上\n　領有国が§Y[Root.GetName]§!かその従属国である"
  swe_sca_low_countries_ct:2 "報酬はミッションの達成条件により変化します。\n\n自国が皇帝である間に、§Y北ブラバント地域§!、§Yフリースラント地域§!、§Yホラント地域§!を神聖ローマ帝国の一部としてミッションを達成した場合、帝国の権威§G25§!を獲得します。また、補正「§Y低地地方帝国§!」を§Y25年間§!獲得し、以下の効果を得ます：\n帝国の権威成長補正：§G+50.0%§!\n関係改善：§G+20.0%§!\n\n上の条件ではない場合、§Y低地地方§!で§Y[Root.GetName]§!またはその従属国が領有している州すべてで、補正「§Y低地地方の支配§!」を§Y15年間§!獲得し、以下の効果を得ます：\n州の交易品生産補正：§G+25.0%§!\n分離主義の年数：§G-10§!"
  swe_sca_refine_the_carolaen_training_title:0 "カロリアンの改良"
  swe_sca_refine_the_carolaen_training_desc:0 "カロリアンは我が軍における屋台骨である。彼らの規律と勇敢さにより、戦場での多くの勝利をもたらしてきた。\nしかし一つだけ弱点がある。まるで我が国の鋼鉄のように壊れない心臓を持った新兵を必要とするが、そんな兵士を見つけるのは難しい。そこで召集のプロセスを改革し、訓練方法を改善することで、より多くのカロリアンを確実に配備できるようにすべきだ。"
@@ -2732,13 +2732,13 @@
  nor_sca_rio_grande_and_california_title:1 "リオ・グランデへの移住"
  nor_sca_rio_grande_and_california_desc:0 "カリフォルニア地方やリオ・グランデ地方には、金やその他の貴重な金属が豊富にあるという噂がある。これら地方を開拓し、これらの噂を調査しなければならない。"
  nor_sca_rio_grande_and_california_tt:0 "§Y[Root.GetName]§!またはその従属国が領有する§Y金§!を算出する州すべてで、補正「§Y金採掘の強化§!」を§Y25年間§!獲得し、以下の効果を得ます：\n州の交易品生産：§G+2.00§!"
- nor_sca_rio_grande_and_california_ct:0 "§Y[Root.GetName]§!のライバルか敵によって直接または間接的に領有されている§Y北アメリカ§!の州全てに恒久的な請求権を獲得します。"
+ nor_sca_rio_grande_and_california_ct:0 "§Y[Root.GetName]§!のライバルか敵によって直接または間接的に領有されている§Y北アメリカ§!の州すべてに恒久的な請求権を獲得します。"
  nor_sca_control_the_panama_title:0 "パナマの支配"
  nor_sca_control_the_panama_desc:0 "パナマは太平洋と大西洋を隔てる細い地域だ。当然、この州は2つの海をつなぐ港として高い価値がある。この地を手中に収め、そこに通行税を設置せねばならない！"
  nor_sca_control_the_panama_tt:0 "パナマ通行料"
  nor_sca_norwegian_colombia_title:0 "国境の拡大"
  nor_sca_norwegian_colombia_desc:0 "パナマ南部にニューグラナダ地方があるー少なくともスペイン人はそう呼んでいる。この密林と丘陵地帯に何があるかは不明だが、南へ国教を広げ、南アメリカの秘密を発見することが我が責務である。"
- nor_sca_norwegian_colombia_ct:0 "§Y[Root.GetName]§!のライバルか敵によって直接または間接的に領有されている§Y南アメリカ§!の州全てに恒久的な請求権を獲得します。"
+ nor_sca_norwegian_colombia_ct:0 "§Y[Root.GetName]§!のライバルか敵によって直接または間接的に領有されている§Y南アメリカ§!の州すべてに恒久的な請求権を獲得します。"
  nor_sca_norwegian_peru_title:0 "インカの征服"
  nor_sca_norwegian_peru_desc:0 "ペルーの山岳地帯に居住しているインカ文明は、金と銀を大量に所有している。この貴重な金属を過剰に保有する重荷を取り除く手助けをすべきだろう。"
  nor_sca_colonial_empire_title:0 "南アメリカの支配"
@@ -2772,7 +2772,7 @@
  nor_sca_conquer_the_enterpots_ct:0 "§Y[Root.GetName]§!は、§Yバルト海§!沿岸全域に恒久的な請求権を獲得します。"
  nor_sca_dominate_the_baltic_sea_title:0 "バルト海の支配"
  nor_sca_dominate_the_baltic_sea_desc:0 "バルト海のすべての港が潜在的な宿敵や敵に支配されることはもはや許されない。今こそ沿岸全域を支配し、バルト海の唯一の支配者となる時だ。"
- dan_sca_balticum_dominance_tt:0 "§Yバルト海§!の沿岸州全てを§Y[Root.GetName]§!またはその従属国が領有している。"
+ dan_sca_balticum_dominance_tt:0 "§Yバルト海§!の沿岸州すべてを§Y[Root.GetName]§!またはその従属国が領有している。"
  dan_establish_merc_contracts_title:0 "ドイツ人傭兵"
  dan_establish_merc_contracts_desc:0 "デンマークの土地は豊かで、多くの人口を維持でき、その見返りとして兵士として国家に貢献する。\nしかし、代わりに誰かを雇うことができるのに、なぜデンマークの優秀な者たちの命を戦争のために投げ捨てなければならないのか？南ドイツには、有能で装備の整った傭兵団がたくさんある。彼らと接触すべきだろう。"
  dan_establish_merc_contracts_tt:0 "§Yドイツ傭兵団§!の本拠：\n領有国が§Y[Root.GetName]§!かその従属国か、§Y[Root.GetName]§!の評価§Y100§!以上の国家である。"
@@ -3791,7 +3791,7 @@
  pol_every_grain_province_tt:0 "§Y前提条件§!を満たした全ての§Y州§!は以下を獲得します："
  polish_grain:0 "ポーランドの穀物"
  pol_better_chance_to_spawn_industrialization_tt:0 "§Y産業革命§!をがより生じやすくなります"
- pol_upgrade_wool_to_cloth_tt:0 "\n§Y羊毛§!の州全てが§Y布地§!生産になります"
+ pol_upgrade_wool_to_cloth_tt:0 "\n§Y羊毛§!の州すべてが§Y布地§!生産になります"
  pol_1_merc_per_trading_bonus_tt:0 "\n§Y交易ボーナス§!につき重商主義§G1§!を獲得します"
  pol_highest_eu_income_tt:0 "§Yヨーロッパ§!に首都がある他のどの国家よりも§Y月間収入§!が高い"
  pol_if_used_ge_rest_else_30_years_extension_tt:1 "追加の§Y黄金時代§!を獲得するか、現在発生中の黄金時代を§G50§!年延長延長します"
@@ -3825,17 +3825,17 @@
  pol_lavra_2_or_3_tt:0 "記念碑「§Yキエフ・ペチェールシク大修道院§!」を§Y1§!回以上アップグレードを行った"
  pol_changes_tt:0 "§Rこの開発はポーランドにとって不利に働く開発を生じるでしょう§!"
  pol_every_elector_gets_tt:0 "\n全ての§Y選帝侯§!は以下を獲得します："
- pol_4_400_dev_tt:0 "自国の従属国§Y4ヶ国§!以上で総開発度が§Y400§!以上である"
+ pol_4_400_dev_tt:0 "自国の従属国§Y4ヶ国§!以上で総開発度が§Y400§!以上"
  pol_delegate_the_formation_of_royal_prussia_tt:1 "この選択肢により、@PRU §YDucal Prussia§!を自国の旗の下に結成できます。"
  pol_more_army_prof_per_general_tt:0 "\n今後§Y20年間§!、将軍雇用時に追加の§Y軍熟練度§!§G+25%§!を獲得します"
  pol_daugava_estuary_will_be_expanded_tt:0 "§Yダウガヴァ河口§!が拡張される"
  pol_if_chose_hre_path:0 "イベント「§Yヴワディスワフ3世の後継者§!」で§Y地方貴族§!を選んだ場合、今後§Y20年間§!、傭兵が§G軍熟練度§!のコストが減少すると共に："
- pol_ruler_ts_14:0 "[Root.Monarch.GetName]の£adm£、£dip£、£mil£の合計値が§Y14§!以上"
+ pol_ruler_ts_14:0 "[Root.Monarch.GetName]の£adm£・£dip£・£mil£の合計値が§Y14§!以上"
  pol_unlock_when_plc_tt:0 "\nこのミッションは、@PLC コモンウェルスに変態すると解禁されます"
  pol_6_issues_passed:0 "議会で§Y6§!以上の議題を可決した（§Y[Root.GetNumOfIssuesPassed]§!/§Y6§!）。"
  pol_alternatively_rebellion_tt:0 "\nそうでない場合、以下のイベントが発生し、§Yマグナート貴族§!が自領内で§R蜂起§!します："
  pol_claim_lithuanian_lands:0 "@LIT §YLithania§!大公国が領有する全州に請求権を獲得します"
- 6_dip_rep_tt:0 "外交評判§Y6§!以上である"
+ 6_dip_rep_tt:0 "外交評判が§Y6§!以上"
  pol_centralized_royal_court_authority_modifier:0 "王宮権威の一元化"
  pol_crimson_privileges_modifier:0 "真紅の特権"
  pol_new_henrikian_articles_modifier:0 "新ヘンリク条項"
@@ -4068,7 +4068,7 @@
  lit_4_ca_tt:0 "§Y4§!以上の§Y文化受容§!を行って、このミッションを達成した場合："
  lit_enable_nomads_for_30_years:0 "§Y30年間§!、§Y部族§!階級を有効にする"
  25_permanent_power_projection:1 "戦力投射のミッション報酬§Y（永続）§!"
- lit_has_3_toh_tt:0 "異端の寛容度が§G3§!以上である"
+ lit_has_3_toh_tt:0 "異端の寛容度が§G3§!以上"
  lit_every_province_with_man_base_production_tt:0 "\n§Y工場§!がある領有州はすべて、基礎生産が§G1§!増加"
  flavor_lit.14.t:0 "カジミェシュ・ヤギェウォの列聖"
  flavor_lit.14.d:0 "最初はワルシャワの王宮で誕生したカジミェシュはポーランド人の司祭のもとで成人しました。保守的な養育を受けた彼は信仰を重んじ、胸に紋章としてつけるようになりました。彼の治世中に行った働き、すなわちいくつかの寺院の建立や教皇庁との関係改善により、彼は聖人に宣言され、リトアニアの敬虔さと宗教的強さの活気に満ちた人物になりました。"
@@ -4500,10 +4500,10 @@
  has_courthouse_building_trigger_tt:0 "§Y裁判所§!または§Y役所§!が建っている"
  has_fort_building_trigger_tt:0 "§Y要塞§!が建っている"
  has_coast_defense_building_trigger_tt:0 "§Y沿岸防衛§!または§Y沿岸砲台§!が建っている"
- swe_swedish_allies_at:0 "§Y[DAN.GetName]§!のライバル国か敵国から§Y[Root.GetName]§!への評価が§Y100§!以上である"
+ swe_swedish_allies_at:0 "§Y[DAN.GetName]§!のライバル国か敵国から§Y[Root.GetName]§!への評価が§Y100§!以上である。"
  swe_swedish_allies_bt:0 "自国の宗主国のライバル国か敵国から§Y[Root.GetName]§!への評価が§Y100§!以上である。"
- swe_swedish_pommerania_at:0 "いずれかの同盟国が§Yヒンターポンメルン§!、§Yフォアポンメルン§!、§Yメクレンブルク§!から§Y7§!州以上領有し§Y[Root.GetName]§!への評価が§Y100§!以上かつ信頼度§Y70§!以上である\n7州全ては同じ同盟国が領有している必要がある。"
- dan_eliminate_the_hanse_bt:0 "§Y[Root.GetName]§!が§Yリューベック§!交易ノードで§Y30%§!以上の交易力を有している"
+ swe_swedish_pommerania_at:0 "いずれかの同盟国が§Yヒンターポンメルン§!、§Yフォアポンメルン§!、§Yメクレンブルク§!から§Y7§!州以上領有し§Y[Root.GetName]§!への評価が§Y100§!以上かつ信頼度§Y70§!以上である。\n7州すべては同じ同盟国が領有している必要がある。"
+ dan_eliminate_the_hanse_bt:0 "§Y[Root.GetName]§!が§Yリューベック§!交易ノードで§Y30%§!以上の交易力を有している。"
  dan_eliminate_the_hanse_ct:0 "既知の国で§Y[HSA.GetName]§!と貿易同盟を結んでいる国がない。"
  dan_trade_post_in_india_at:0 "§Yインド§!圏にあり、§Y交易中心地§!か§Y河口§!のいずれかを有している。"
  teu_pru_conquer_silesia_at:0 "§Y北ドイツ§!及び§Yポーランド§!地方に§Yシレジア§!文化の州が存在しない。"
