--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -222,7 +222,7 @@
  custom_monarch_military_power_desc:1 "戦闘で自身の実力を示せぬままに成人したとみられたものは我が家系にはいない。強固な軍事の伝統が我が家と我が国を強く保っている。"
  custom_backrow_artillery_damage:1 "戦場の支援"
  custom_backrow_artillery_damage_desc:1 "戦いの流れの中でどのように行動すべきか厳しく訓練された砲兵隊員がいれば、前線支援の効率は増大し、戦線は保たれるのだ。"
- custom_harsh_treatment_cost:1 "より厳しい処置"
+ custom_harsh_treatment_cost:1 "弾圧"
  custom_harsh_treatment_cost_desc:1 "時として、反体制派の粛清は不十分となる。彼らの家族、家、村にも火を点け、はっきりとわからせる必要がある。"
  custom_fire_damage_received:1 "禁欲主義"
  custom_fire_damage_received_desc:1 "敵の投擲した火の中に立つことは不愉快なことだが、我らは禁欲的な人間であり、状況がこれ以上ないほど厳しくとも冷静を保つことができる。"
