--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -196,7 +196,7 @@
  ACTIVE_ESTATE_AGENDA_TITLE:0 "$ESTATE|Y$は$AGENDA|Y$を求める"
  NOT_ENOUGH_ESTATE_AGENDAS_COMPLETED:0 "達成した$ESTATE|Y$からの議題が$VAL|Y$未満"
  ENOUGH_ESTATE_AGENDAS_COMPLETED:0 "$ESTATE|Y$からの議題を$VAL|Y$達成した"
- NOT_ENOUGH_ESTATE_PRIVILEGES_GRANTED_CURRENTLY:0 "$ESTATE|Y$に与えられた特権が$VAL|Y$未満である"
+ NOT_ENOUGH_ESTATE_PRIVILEGES_GRANTED_CURRENTLY:0 "$ESTATE|Y$に与えられた特権が$VAL|Y$未満"
  ENOUGH_ESTATE_PRIVILEGES_GRANTED_CURRENTLY:0 "$VAL|Y$の特権が現在$ESTATE|Y$に与えられている"
  ESTATE_MOD_EXPIRY:0 "（$DATE|Y$に期限切れ）"
  INFLUENCE_FROM_ESTATE_LOYALTY:0 "$OVERLORD|Y$の$ESTATE|Y$の忠誠度"
@@ -1222,8 +1222,8 @@
  estate_seize_land_interaction_tooltip_1000:0 "所有する§Y101§!地域が§R10§!の不穏度を獲得するでしょう。\n所有する§Y101§!州で§R反乱が起こる§!でしょう。"
  NEGATIVE_BALANCE_IN_TWO_MONTHS:0 "最大§Y2§!ヵ月の借金が必要である"
  NOT_NEGATIVE_BALANCE_IN_TWO_MONTHS:0 "最大§Y2§!ヵ月の借金を必要としない"
- INCOME_BALANCE_MORE_THAN:0 "先月の収支が右記以上である："
- INCOME_BALANCE_LESS_THAN:0 "先月の収支が右記未満である："
+ INCOME_BALANCE_MORE_THAN:0 "先月の収支が右記以上："
+ INCOME_BALANCE_LESS_THAN:0 "先月の収支が右記未満："
  estate_cossacks_exploration_expedition_mod:0 "コサックの探検"
  desc_estate_cossacks_exploration_expedition_mod:0 "我々はコサックの先駆的な本能を利用して、この地域の入植と成長を加速している。"
  decision_once_every_twenty_years:0 "この決断は§Y20§!年に一回だけ選択できます。"
@@ -1240,7 +1240,7 @@
  seize_land_rebels_tt:0 "いずれかの階級の忠誠度が§R30§!を下回ると、反乱軍が蜂起する可能性があります。"
  no_other_mil_privilege:0 "§Y月間軍事力§!を付与する他の階級特権がない"
  desc_increase_crown_land_share:0 "土地の所有権を王家側へ集中させることで、広範に及ぶ階級の権力をさらにうまく管理できるようになる。"
- estate_dhimmi_increase_autonomy_in_province_x_tooltip:0 "[agenda_province.GetName]州の自治率が10%以上減少する｡"
+ estate_dhimmi_increase_autonomy_in_province_x_tooltip:0 "[agenda_province.GetName]州の自治率が10%以上減少"
  estate_maratha_subject_rights:0 "従属国の権利"
  estate_rajput_subject_rights:0 "従属国の権利"
  estate_dhimmi_grant_liberties:0 "[Root.GetDhimmiName]の自由の付与"
