--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -287,7 +287,7 @@
  mechanic_is_trading_city_yes:1 "§Y交易都市§!である"
  mechanic_free_city_yes:1 "§Y自由都市§!である"
  ability_russian_mechanic:0 "ロシア政府"
- ability_feudal_theocracy_mechanic:1 "封建神権制"
+ ability_feudal_theocracy_mechanic:1 "封建的神権制"
  monarchy_mechanic:0 "君主制"
  republic_mechanic:0 "共和制"
  theocracy_mechanic:0 "神権制"
