--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -574,8 +574,8 @@
  NATIVE_TRIBE_SETTLE_NON_TRIBAL_LAND:0 "§R$PROV|Y$は我が部族の土地ではありません。§!"
  NATIVE_TRIBE_SETTLE_IS_NOT_SETTLED:0 "§R我々の部族は定住していません§!"
  PROVINCE_SETTLE_TOOLTIP:0 "$PROV|Y$への定住"
- TRIBE_DEVELOPMENT_LESS_THAN:0 "部族発展度が$VAL|Y$未満である（現在$CURRENT|0Y$）\n"
- TRIBE_DEVELOPMENT_AT_LEAST:0 "部族発展度が$VAL|Y$以上である（現在$CURRENT|0Y$）\n"
+ TRIBE_DEVELOPMENT_LESS_THAN:0 "部族発展度が$VAL|Y$未満（現在$CURRENT|0Y$）\n"
+ TRIBE_DEVELOPMENT_AT_LEAST:0 "部族発展度が$VAL|Y$以上（現在$CURRENT|0Y$）\n"
  HAVE_LESS_TRIBE_DEVELOPMENT_THAN_COMP:0 "部族発展度が$COUNTRYNAME|Y$（$VAL|Y$）よりも低い。現在$CURRENT|0Y$。"
  HAVE_MORE_TRIBE_DEVELOPMENT_THAN_COMP:0 "部族発展度が$COUNTRYNAME|Y$（$VAL|Y$）よりも高い。現在$CURRENT|0Y$。"
  CONFIRM_SETTLE_DESC:2 "本当に$PROV|Y$の部族開発度から$ADM$£adm£、$DIP$£dip£、$MIL$£mil£を$COST$を消費して、定住しますか？"
@@ -1604,7 +1604,7 @@
  custom_all_power_cost:0 "知性の研磨"
  custom_all_power_cost_desc:0 "自国の民話によると、昔、奇妙な魔法使いが我が宮中を訪れ、支配者に「呪文のマナコスト」を減少させる祝福を与えたそうだ。今日まで、この狂人が何を言っていたのか、我々は誰も知らない…"
  custom_country_admin_power:0 "個人秘書"
- custom_country_admin_power_desc:0 "支配者全員が、自身の仕事に関わる事務処理を全部したいと思っているわけではない。幸いなことに、秘書という存在がいる｡"
+ custom_country_admin_power_desc:0 "支配者全員が、自身の仕事に関わる事務処理を全部したいと思っているわけではない。幸いなことに、秘書という存在がいる。"
  custom_monthly_splendor:0 "華麗なる帝国"
  custom_monthly_splendor_desc:0 "自国は、文化と威信ある国だ。周りの誰もが、我が輝きを羨むことだろう。"
  custom_monthly_heir_claim_increase:0 "狩猟の集まり"
@@ -1618,19 +1618,19 @@
  custom_imperial_mandate:0 "天命の正統性"
  custom_imperial_mandate_desc:0 "天命を請求する氏族や王国は数多くあれど、その正統性を真に有していたのは我々だけだ。"
  custom_election_cycle:0 "選挙への熱意"
- custom_election_cycle_desc:0 "自国の国民は、民主主義の真の提唱者である。そのため、自国の統治者は、他の共和国よりも数多く有権者の前で自分自身を証明しなければならない｡"
+ custom_election_cycle_desc:0 "自国の国民は、民主主義の真の提唱者である。そのため、自国の統治者は、他の共和国よりも数多く有権者の前で自分自身を証明しなければならない。"
  custom_reelection_cost:0 "元老院の占拠"
  custom_reelection_cost_desc:0 "選挙で選ばれた統治者は、他のいかなる権力者よりも上位にあり、さらには国家元老院の権力を請求している。彼は、統治者と元老院の双方の地位を統合している。"
  custom_state_governing_cost:0 "役所への補助金"
- custom_state_governing_cost_desc:0 "我が王国は国家の絶対支配を望んでいるが、権力の分裂は避けられない。国の地方の役所に補助金を充てがうことで、統治過程が思う通りに進み、地方行政官の王室への忠義の維持を保証する｡"
+ custom_state_governing_cost_desc:0 "我が王国は国家の絶対支配を望んでいるが、権力の分裂は避けられない。国の地方の役所に補助金を充てがうことで、統治過程が思う通りに進み、地方行政官の王室への忠義の維持を保証する。"
  custom_trade_company_governing_cost:0 "自治交易会社"
- custom_trade_company_governing_cost_desc:0 "領内統治というのは行政的に常に疲弊するものだー特に他大陸にある海外領に関しては｡貿易会社にさらに自治権を与えることで、宮廷の助けを借りずに、彼ら自身で領土を管理出来る。"
+ custom_trade_company_governing_cost_desc:0 "領内統治というのは行政的に常に疲弊するものだー特に他大陸にある海外領に関しては。貿易会社にさらに自治権を与えることで、宮廷の助けを借りずに、彼ら自身で領土を管理できる。"
  custom_expand_administration_cost:0 "局の超過勤務"
  custom_expand_administration_cost_desc:0 "優れた支配者は、国内のあらゆる面で臣民の模範となる必要があるー例え、統治拡大のために局内で超過勤務になったとしてもだ。"
  custom_curia_powers_cost:0 "教皇の親族"
  custom_curia_powers_cost_desc:0 "自国の支配者の一門の中に、聖座の重要な枢機卿がいる。彼らを利用すれば、教皇から受けるいくつかの御恩から簡単に逃れることができる。"
  custom_prestige_per_development_from_conversion:0 "宣教師の論争"
- custom_prestige_per_development_from_conversion_desc:0 "自国の宣教師は、熱狂と改宗の国際的な論争で自身の技能を証明することに決めた。改宗した州ごとに、領内では信仰の兄弟姉妹の羨望を享受している｡"
+ custom_prestige_per_development_from_conversion_desc:0 "自国の宣教師は、熱狂と改宗の国際的な論争で自身の技能を証明することに決めた。改宗した州ごとに、領内では信仰の兄弟姉妹の羨望を享受している。"
  custom_good_monthly_karma:0 "祝福されたカルマ"
  custom_good_monthly_karma_desc:0 "自国の宮廷の過去の生活は、謙虚で信心深いものであった。彼らの過去の行為は、自国を祝福しているようだ…"
  custom_bad_monthly_karma:0 "呪われたカルマ"
@@ -1644,7 +1644,7 @@
  custom_innovativeness_gain:0 "革新的刷新"
  custom_innovativeness_gain_desc:0 "我が国の科学力は世界一！それを否定するのは大馬鹿者だけだ！"
  custom_trade_company_investment_cost:0 "国際投資家"
- custom_trade_company_investment_cost_desc:0 "交易会社の格上げ費用は値が張るものだ｡本当に高い。しかし、外国人投資家の資本があれば、この事業に問題なく資金投入できる。"
+ custom_trade_company_investment_cost_desc:0 "交易会社の格上げ費用は値が張るものだ。本当に高い。しかし、外国人投資家の資本があれば、この事業に問題なく資金投入できる。"
  custom_admiral_cost:0 "拡大された海軍将校"
  custom_admiral_cost_desc:0 "自国の提督は、海軍の世界においては本当に最高の提督であるが、戦場でその一人が倒れれば、その代わりに非常に高い費用がかかる。海軍士官を拡大することで、最新世代の大提督となるかもしれない優秀な水兵をより多く確保できる。"
  custom_global_naval_barrage_cost:0 "組織化された海軍攻撃"
@@ -1664,7 +1664,7 @@
  custom_expel_minorities_cost:0 "餞別"
  custom_expel_minorities_cost_desc:0 "マイノリティの追放は、迫害や差別といった多くの恐ろしいことを連想させる。自国はそれを我慢するのではなく、より道徳的に正しい方法を取る。ダカットや新世界の土地をマイノリティにあげることで、我が政府が実際に彼らを追うことなく、彼らが自国を後にする動機を与えることができる。"
  custom_colonist_placement_chance:0 "快適な住処"
- custom_colonist_placement_chance_desc:0 "新世界の植民者たちが生き延びるため、快適で安全な家を提供し、彼らが必要とする全てを補填する｡"
+ custom_colonist_placement_chance_desc:0 "新世界の植民者たちが生き延びるため、快適で安全な家を提供し、彼らが必要とする全てを補填する。"
  custom_appoint_cardinal_cost:0 "世界のための枢機卿"
  custom_appoint_cardinal_cost_desc:0 "お金が世界におけるカトリック権威の隘路となることは許されない。デダカットよりも神に献身的な枢機卿を選ぶことで、世界中の誰もが枢機卿の一人や二人を享受できる。"
  custom_enforce_religion_cost:0 "大十字軍"
@@ -1680,19 +1680,19 @@
  custom_yearly_army_professionalism:0 "軍事学"
  custom_yearly_army_professionalism_desc:0 "自国の兵は全員、一定期間、軍事学校で戦争の基礎を学ぶ。そうすることで、自軍は理論的な専門家集団となる。\n彼らに今必要なのは、実際に戦争を経験し、本物の専門家になることだ…"
  custom_drill_gain_modifier:0 "疑似戦争"
- custom_drill_gain_modifier_desc:0 "多くの大将が、自身の部隊に戦争の基本やどう動くべきかを教練している。彼らは、人道的とは言えないまでも、程々に部隊を訓練している。自軍はその点では異なっており、少佐が訓練している。少佐は、訓練中に自分たちの大砲を使って、兵士の生活をできる限り厳しく、現実的なものにしようとする｡"
+ custom_drill_gain_modifier_desc:0 "多くの将軍は、自身の部隊に戦争の基本や立ち回り方だけを教練している。彼らは、あまり人道的ではないにしても、節度をもって部隊を訓練している。自軍はその点では異なっている。少佐によって訓練されており、少佐は訓練中に兵士に向けて大砲を使用することで、兵士の生活をできる限り厳しく、現実的なものにしようとしている。"
  custom_drill_decay_modifier:0 "厳格な士官"
- custom_drill_decay_modifier_desc:0 "兵士は平時や戦闘後の回復期での訓練を忘れがちだ。それを防ぐため、自国には非常に厳格な士官がいる｡"
+ custom_drill_decay_modifier_desc:0 "兵士は平時や戦闘後の回復期での訓練を忘れがちだ。それを防ぐため、自国には非常に厳格な士官がいる。"
  custom_infantry_fire:0 "射撃訓練"
  custom_infantry_fire_desc:0 "自国の歩兵は、毎日休むことなく銃の腕を磨いている。その狙撃は正確で、致命傷を与える。"
  custom_infantry_shock:0 "近接戦闘技術"
- custom_infantry_shock_desc:0 "射程距離がある武器を所持している方が、当然近接武器のみの所持より良いが、混沌とした戦闘においては、それが保証されているわけではない。無駄な死を避けるために、自軍の部隊は全員、剣や槍を振るう訓練を受けており、さらに非武装時の戦闘訓練も実施している｡"
+ custom_infantry_shock_desc:0 "射程距離がある武器を所持している方が、当然近接武器のみの所持より良いが、混沌とした戦闘においては、それが保証されているわけではない。無駄な死を避けるために、自軍の部隊は全員、剣や槍を振るう訓練を受けており、さらに非武装時の戦闘訓練も実施している。"
  custom_cavalry_fire:0 "規律ある馬"
  custom_cavalry_fire_desc:0 "白熱した戦闘中において、馬はまず落ち着いた状態を保てないので、騎兵隊は射撃武器の安定使用に苦慮していた。しかし、銃声や大砲の発射音に慣れた、よく調教された馬を導入することで、この状況は一変した。"
  custom_cavalry_shock:0 "突撃ぃぃぃぃぃ！"
  custom_cavalry_shock_desc:0 "秩序と規律は、戦闘前、戦闘後の兵士のためのものだ。しかし、戦闘中における騎兵の規範はただ一つのみだ。突っ込めええええええ！"
  custom_artillery_shock:0 "前線の大砲"
- custom_artillery_shock_desc:0 "時折、砲兵のみが実際唯一の正しい選択肢の場合がある｡"
+ custom_artillery_shock_desc:0 "時折、砲兵のみが実際唯一の正しい選択肢の場合がある。"
  custom_reserves_organisation:0 "冷徹な能率性"
  custom_reserves_organisation_desc:0 "わが軍の兵士は訓練中に多くの精神的、肉体的苦痛を経験しているため、戦友の死は彼らにとって無意味なものとなっている。"
  custom_global_supply_limit_modifier:0 "兵站の中心"
@@ -1700,7 +1700,7 @@
  custom_general_cost:0 "軍の階級拡大"
  custom_general_cost_desc:0 "将校の数を増やせば、国家のために大将軍として活躍できる有能な人材をより多く確保できることだろう。"
  custom_raze_power_gain:0 "襲撃と略奪"
- custom_raze_power_gain_desc:0 "さあ、現実を見てみよう｡都市全域が真っ平らになるまで破壊し、財産を掠奪し、家を収奪すること以上に満足できることなんて無いよね？\nえ、あるの？まあ、この国にはないけどね！"
+ custom_raze_power_gain_desc:0 "さあ、現実を見てみよう。都市全域が真っ平らになるまで破壊し、財産を掠奪し、家を収奪すること以上に満足できることなんて無いよね？\nえ、あるの？まあ、この国にはないけどね！"
  custom_manpower_in_true_faith_provinces:0 "宗教による徴兵"
  custom_manpower_in_true_faith_provinces_desc:0 "軍事と宗教の機関は通常分かれているが、自国のように宗教の根源が根深い国では、真の信仰を持つ者たちが軍隊で戦うことができるのは極々当たり前のことだ。"
  custom_country_military_power:0 "軍事政府"
@@ -1841,7 +1841,7 @@
  plot_succeeded_tooltip:0 "プロットの成功"
  coup_in_palace_events.6.b:0 "君主の勝利！"
  estate_regency_mod_desc_tt:0 "§Y後継者§!が即位するまで"
- HOLY_SITE_4336_DESC:0 "The Ateshgah of Baku is one of the most important Fire Temples of the Zoroastrianism. While technically in Surakhani, it is binded to the city of Baku since antiquity, as it was also called 'The Fires of Baguan' in reference to the city of Baku. The fire emerges directly from the surface and its flames burn perpetually, with ferocious strength. It is said that some 'fire worshipers' still live in the vicinity."
- HOLY_SITE_2212_DESC:0 "When the Khorezm fell to the muslim forces, some worshipers fled to India and founded a community in Sanjan, carrying a sacred fire with them. A silsila, or traditional link, was formed between this new community and the original one in Persia from where the name Sanjan came from. Since 1297, the fire has moved around, first to the Bahrot Caves, then to the village of Bansda and finally to Navsari."
+ HOLY_SITE_4336_DESC:0 "バクーのアテシュギャーフは、ゾロアスター教の最も重要な火の寺院の一つだ。厳密にはスラカニにあるのだが、都市バクーに関連付けて「バクーの火」とも呼んできたように、古代から都市バクーと結びつけてきた。その火は地表から直接出ており、猛烈な勢いで、炎は永久に燃え続けている。今でも周辺には「火の崇拝者」が暮らしていると言われている。"
+ HOLY_SITE_2212_DESC:0 "ホラズムがイスラム勢力に敗れたとき、一部の崇拝者はインドに逃れ、聖火を携えてサンジャンに共同体を設立した。この新共同体とペルシアの元々の共同体との間にはシルシラ、伝統的な系図が形成され、サンジャンの名の由来となった。1297年以来、火は転々と動き、最初はバーロット洞窟、次にバーンスダーの村落へ、そして最後はナブサーリへと移動した。"
  pegu_subject_ayu_tt:0 "\n§Yアユタヤ§!が朝貢国意外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
  pegu_subject_lna_tt:0 "\n§Yラーンナー§!が朝貢国意外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
