--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -823,6 +823,6 @@
  ENEMY_GUARANTEES:0 "$NAME|Y$は以下の国によって独立が保証されています：\n"
  shinto_events.58.c:1 "南無阿弥陀仏。彼らの共同体に全権を与えるのだ。"
  shinto_events.58.e:1 "南無阿弥陀仏。彼らの哲学は理に適っている。だが、彼らの支配など許さぬ。"
- empire_of_china_nomadic_border_tt:0 "§Y遊牧民§!で自国および従属国（非朝貢国）の合計開発度が§Y300§!以上である"
+ empire_of_china_nomadic_border_tt:0 "§Y遊牧民§!で自国および従属国（非朝貢国）の合計開発度が§Y300§!以上"
  temple_of_confucius_modifier:0 "孔子廟"
  desc_temple_of_confucius_modifier:0 "曲阜の孔廟は最大かつ最も有名な孔子廟である。元々は孔子自身の家であったが、廟は儒教の聖地のような存在になっている。多くの皇帝が廟を訪れ、孔子を偲んで犠牲を供えてきた。"
