--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1385,20 +1385,20 @@
  HAVE_LESS_REVOLUTIONARY_GUARD_THAN:0 "$VALUE|Y$未満の革命衛兵連隊を持っている。\n"
  HAVE_AT_LEAST_REVOLUTIONARY_GUARD_THAN:0 "$VALUE|Y$以上の革命衛兵連隊を持っている。\n"
  REVOLUTIONARY_GUARD_REGIMENT_TYPE:0 "革命衛兵"
- HAVE_LESS_INFANTRY_THAN_NUM:0 "歩兵が$NUM|Y$未満である"
- HAVE_MORE_INFANTRY_THAN_NUM:0 "歩兵が$NUM|Y$以上である"
- HAVE_LESS_CAVALRY_THAN_NUM:0 "騎兵が$NUM|Y$未満である"
- HAVE_MORE_CAVALRY_THAN_NUM:0 "騎兵が$NUM|Y$以上である"
- HAVE_LESS_ARTILLERY_THAN_NUM:0 "砲兵が$NUM|Y$未満である"
- HAVE_MORE_ARTILLERY_THAN_NUM:0 "砲兵が$NUM|Y$以上である"
- HAVE_LESS_BIG_SHIPS_THAN_NUM:0 "大型船が$NUM|Y$未満である"
- HAVE_MORE_BIG_SHIPS_THAN_NUM:0 "大型船が$NUM|Y$以上である"
- HAVE_LESS_LIGHT_SHIPS_THAN_NUM:0 "小型船が$NUM|Y$未満である"
- HAVE_MORE_LIGHT_SHIPS_THAN_NUM:0 "小型船が$NUM|Y$以上である"
- HAVE_LESS_GALLEYS_SHIPS_THAN_NUM:0 "ガレー船が$NUM|Y$未満である"
- HAVE_MORE_GALLEYS_SHIPS_THAN_NUM:0 "ガレー船が$NUM|Y$以上である"
- HAVE_LESS_TRANSPORTS_THAN_NUM:0 "輸送船が$NUM|Y$未満である"
- HAVE_MORE_TRANSPORTS_THAN_NUM:0 "輸送船が$NUM|Y$以上である"
+ HAVE_LESS_INFANTRY_THAN_NUM:0 "歩兵が$NUM|Y$未満"
+ HAVE_MORE_INFANTRY_THAN_NUM:0 "歩兵が$NUM|Y$以上"
+ HAVE_LESS_CAVALRY_THAN_NUM:0 "騎兵が$NUM|Y$未満"
+ HAVE_MORE_CAVALRY_THAN_NUM:0 "騎兵が$NUM|Y$以上"
+ HAVE_LESS_ARTILLERY_THAN_NUM:0 "砲兵が$NUM|Y$未満"
+ HAVE_MORE_ARTILLERY_THAN_NUM:0 "砲兵が$NUM|Y$以上"
+ HAVE_LESS_BIG_SHIPS_THAN_NUM:0 "大型船が$NUM|Y$未満"
+ HAVE_MORE_BIG_SHIPS_THAN_NUM:0 "大型船が$NUM|Y$以上"
+ HAVE_LESS_LIGHT_SHIPS_THAN_NUM:0 "小型船が$NUM|Y$未満"
+ HAVE_MORE_LIGHT_SHIPS_THAN_NUM:0 "小型船が$NUM|Y$以上"
+ HAVE_LESS_GALLEYS_SHIPS_THAN_NUM:0 "ガレー船が$NUM|Y$未満"
+ HAVE_MORE_GALLEYS_SHIPS_THAN_NUM:0 "ガレー船が$NUM|Y$以上"
+ HAVE_LESS_TRANSPORTS_THAN_NUM:0 "輸送船が$NUM|Y$未満"
+ HAVE_MORE_TRANSPORTS_THAN_NUM:0 "輸送船が$NUM|Y$以上"
  FROM_GOLD:0 "金から：$AMOUNT|%R$"
  CAWA_NAME:0 "$HOME$第$NUM$チェワ"
  MODIFIER_AMOUNT_OF_CAWA:0 "召集可能なチェワ"
@@ -1720,8 +1720,8 @@
  IS_HEGEMON_OF_TYPE_TRIGGER:0 "$TYPE$である"
  IS_NOT_HEGEMON_OF_TYPE_TRIGGER:0 "$TYPE$ではない"
  REMOVE_HEGEMONY:0 "覇権を除去"
- OWES_AT_LEAST_FAVORS:0 "$WHO$に対する好感度が$VALUE$以上である"
- NOT_OWES_AT_LEAST_FAVORS:0 "$WHO$に対する好感度が$VALUE$未満である"
+ OWES_AT_LEAST_FAVORS:0 "$WHO$に対する好感度が$VALUE$以上"
+ NOT_OWES_AT_LEAST_FAVORS:0 "$WHO$に対する好感度が$VALUE$未満"
  DECOLONIZE_EFFECT:0 "$PROVINCE$が脱植民地化"
  HAS_NAVAL_DOCTRINE_OF_TYPE:0 "$NAME$の海軍ドクトリンを有している"
  NOT_HAS_NAVAL_DOCTRINE_OF_TYPE:0 "$NAME$の海軍ドクトリンを有していない"
@@ -1746,10 +1746,10 @@
  MODIFIER_ALLOW_CLIENT_STATES:0 "§Y衛星国§!の作成が可能"
  EXPAND_INFRASTRUCTURE_NOT_OWNED:0 "そのインフラを拡張するには、まず$WHERE|Y$を領有する必要があります。"
  REV_GAIN_CB_MONTHS:0 "§Y$ACTIVE$§Wは§Y$PASSIVE$§Wに対して開戦事由§Y$TYPE$§Wを獲得します。\nこの開戦事由は§G$LENGTH$§!ヶ月間利用可能です。\n"
- HAVE_LESS_LAND_FORCELIMIT_COUNTRY:1 "陸軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）より少ない。"
- HAVE_MORE_LAND_FORCELIMIT_COUNTRY:1 "陸軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）以上である"
- HAVE_LESS_NAVAL_FORCELIMIT_COUNTRY:1 "海軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）より少ない"
- HAVE_MORE_NAVAL_FORCELIMIT_COUNTRY:1 "海軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）以上である"
+ HAVE_LESS_LAND_FORCELIMIT_COUNTRY:1 "陸軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）未満"
+ HAVE_MORE_LAND_FORCELIMIT_COUNTRY:1 "陸軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）以上"
+ HAVE_LESS_NAVAL_FORCELIMIT_COUNTRY:1 "海軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）未満"
+ HAVE_MORE_NAVAL_FORCELIMIT_COUNTRY:1 "海軍扶養限界が$COUNTRY|Y$（$AMOUNT|Y$）以上"
  HAVE_LESS_CITIES_THAN_NO_SUBJECT:0 "都市の領有数が$NUMCITIES|Y$未満である。"
  HAVE_MORE_CITIES_THAN_NO_SUBJECT:0 "都市の領有数が$NUMCITIES|Y$以上である。"
  HAVE_LESS_CITIES_THAN_COMP_NO_SUBJECT:0 "都市の領有数が$COUNTRYNAME|Y$（$NUMCITIES|Y$）より少ない。"
@@ -1830,10 +1830,10 @@
  HAVE_NOT_ASSIMILATED_CULTURE:0 "$CULTURE|Y$文化と同化していない"
  HAVE_LESS_SHIPS_PROTECTING_TRADE_THAN:0 "交易を保護している小型船が$VAL|Y$隻未満である。"
  HAVE_MORE_SHIPS_PROTECTING_TRADE_THAN:0 "$VAL|Y$隻以上の小型船が交易を保護している。"
- TRADE_NODE_SHARE_FROM_SHIPS:0 "$WHO|Y$が船舶からのノード内の交易力を$SHARE|Y%$以上有している"
- NOT_TRADE_NODE_SHARE_FROM_SHIPS:0 "$WHO|Y$が船舶からのノード内の交易力を$SHARE|Y%$未満である"
- HAS_N_PASHAS:0 "パシャが$NUM|Y$以上である"
- NOT_HAS_N_PASHAS:0 "パシャが$NUM|Y$未満である"
+ TRADE_NODE_SHARE_FROM_SHIPS:0 "$WHO|Y$の船によるノード内交易力シェアが$SHARE|Y%$以上"
+ NOT_TRADE_NODE_SHARE_FROM_SHIPS:0 "$WHO|Y$の船によるノード内交易力シェアが$SHARE|Y%$以上ではない"
+ HAS_N_PASHAS:0 "パシャが$NUM|Y$以上"
+ NOT_HAS_N_PASHAS:0 "パシャが$NUM|Y$未満"
  TRANSFERS_TRADE_POWER_TO_TRIGGER:0 "$COUNTRY|Y$に交易力を送出している"
  NOT_TRANSFERS_TRADE_POWER_TO_TRIGGER:0 "$COUNTRY|Y$に交易力を送出していない"
  RECEIVES_TRADE_POWER_FROM_TRIGGER:0 "$COUNTRY|Y$から交易力を受け取っている"
@@ -1848,8 +1848,8 @@
  NOT_HAS_ADVISOR_TYPE_IN_POOL_TRIGGER:0 "顧問プールに$TYPE|Y$タイプの顧問がいない"
  OWNED_BY_SUBJECT_OF_TRIGGER:0 "$COUNTRY|Y$の従属国が領有している"
  NOT_OWNED_BY_SUBJECT_OF_TRIGGER:0 "$COUNTRY|Y$の従属国が領有していない"
- HAVE_LESS_ALLOWED_BUILDINGS_THAN:0 "建てられる建造物数が$VAL|Y$未満である"
- HAVE_MORE_ALLOWED_BUILDINGS_THAN:0 "建てられる建造物数が$VAL|Y$以上である"
+ HAVE_LESS_ALLOWED_BUILDINGS_THAN:0 "建てられる建造物数が$VAL|Y$未満である。"
+ HAVE_MORE_ALLOWED_BUILDINGS_THAN:0 "建てられる建造物数が$VAL|Y$以上である。"
  cossacks_adm_power_gain_modifier:0 "農奴受入の進捗上昇補正"
  cossacks_dip_power_gain_modifier:0 "襲撃隊の進捗上昇補正"
  cossacks_mil_power_gain_modifier:0 "コサック軍の進捗上昇補正"
@@ -1875,7 +1875,7 @@
  MODIFIER_MAX_FLAGSHIPS:0 "最大旗艦数"
  HAS_NUM_FLAGSHIPS:0 "旗艦が$NUM|Y$隻以上"
  NOT_HAS_NUM_FLAGSHIPS:0 "旗艦が$NUM|Y$隻未満"
- HAS_FLAGSHIP_CAPACITY:0 "建造済みまたは建設中の旗艦が建造可能数未満である"
+ HAS_FLAGSHIP_CAPACITY:0 "建造済または建造中の旗艦が建造可能数未満"
  NOT_HAS_FLAGSHIP_CAPACITY:0 "旗艦を建造可能数最大まで使用している"
  MODIFIER_HEAVY_SHIP_HULL_SIZE_MODIFIER:0 "大型船の船体幅"
  MODIFIER_LIGHT_SHIP_HULL_SIZE_MODIFIER:0 "小型船の船体幅"
